--- a/src/data/analyze.yml
+++ b/src/data/analyze.yml
@@ -3,97 +3,104 @@ version: "3.1"
 nlu:
 - intent: analyze
   examples: |
-    - начни анализировать недалёкую [канаву](object)
-    - исследуй близкое [сваленное дерево](object)
-    - анализируй близкий [светильник](object)
-    - подвергни анализу ближнюю [яму](object)
-    - начни исследовать ближайший [лес](object)
-    - попробуй обследовать близлежащего [упавшего человека](object)
-    - исследуй ближайшего [свалившегося человека](object)
-    - начни обследовать ближнюю [гору](object)
-    - анализируй ближайшего [железного коня](object)
-    - начни анализировать ближайший [останец](object)
-    - попробуй обследовать близлежащую [булыгу](object)
-    - обследуй ближнюю [пропасть](object)
-    - начни анализировать близлежащего [товарища](object)
-    - обследуй ближайшую [булыгу](object)
-    - попробуй анализировать ближнего [товарища](object)
-    - обследуй [лес](object)
-    - обследуй [останец](object)
-    - подвергни анализу [валун](object)
-    - пытайся обследовать [трещину](object)
-    - начни исследовать [дом](object)
-    - обследуй [дубраву](object)
-    - исследуй [автомобиль](object)
-    - начни исследовать [булыгу](object)
-    - попробуй анализировать [барьер](object)
-    - попробуй исследовать [дубраву](object)
-    - пытайся обследовать [камушек](object)
-    - подвергни анализу [лес](object)
-    - подвергни анализу [особняк](object)
-    - анализируй [железного коня](object)
-    - начни анализировать [лампу](object)
-    - исследуй [женщину](object), которая [около](relation) [кучи](object)
-    - подвергни анализу [кучу](object), что находится [рядом с](relation) [камнем](object)
-    - попробуй обследовать [разлом](object), который находится [позади](relation) [валуна](object)
-    - попробуй исследовать [машину](object), что располагается [западнее](relation) [товарища](object)
-    - подвергни анализу [фонарь](object), что [неподалеку от](relation) [расщелины](object)
-    - начни анализировать [валун](object), что находится [сзади от](relation) [лесополосы](object)
-    - начинай анализировать [яму](object), что располагается [спереди от](relation) [булыжника](object)
-    - обследуй [дерево](object), которое находится [за](relation) [пьяным человеком](object)
-    - исследуй [препятствие](object), которое находится [перед](relation) [валуном](object)
-    - подвергни анализу [ребёнка](object), что находится [левее](relation) [валуна](object)
-    - начни анализировать [упавшего человека](object), который находится [левее](relation) [дуба](object)
-    - подвергни анализу [камушек](object), что находится [перед](relation) [лесополосой](object)
-    - исследуй [лампу](object) [на востоке относительно](relation) [рытвины](object)
-    - попробуй анализировать [кучу](object), что [за](relation) [деревом](object)
-    - анализируй [останец](object), находящийся [в южной стороне от](relation) [разрыва](object)
-    - анализируй [останец](object), который [неподалеку от](relation) [лампы](object)
-    - обследуй [тачку](object), что располагается [справа от](relation) [лампы](object), которая [спереди от](relation) [преграды](object)
-    - подвергни анализу [лежащего человека](object), располагающегося [справа от](relation) [разлома](object), который располагается [на востоке относительно](relation) [дома](object)
-    - пытайся анализировать [машину](object), которая располагается [за](relation) [дубом](object), находящийся [спереди от](relation) [ямы](object)
-    - попробуй обследовать [поваленное дерево](object), что [сзади от](relation) [рощи](object), которая находится [рядом с](relation) [препятствием](object)
-    - попробуй исследовать [растение](object), что располагается [на западе от](relation) [упавшего человека](object) [неподалеку от](relation) [преграды](object)
-    - начинай анализировать [лес](object), который располагается [севернее](relation) [трещины](object), которая [севернее](relation) [камня](object)
-    - подвергни анализу [загородку](object), что находится [за](relation) [разрывом](object), который [в северной стороне от](relation) [лежащего человека](object)
-    - обследуй [дубраву](object), что находится [левее](relation) [автомобиля](object), что располагается [восточнее](relation) [провала](object)
-    - исследуй [даму](object), что [перед](relation) [ольхой](object), которая находится [левее](relation) [тачки](object)
-    - анализируй [товарища](object), который [слева от](relation) [разлома](object), что находится [левее](relation) [камня](object)
-    - обследуй [разлом](object), который [слева от](relation) [возвышенности](object), которая находится [на юге относительно](relation) [дуба](object)
-    - анализируй [свет](object), располагающийся [справа от](relation) [рытвины](object), что находится [спереди от](relation) [сломанного дерева](object)
-    - пытайся анализировать [свалившегося человека](object), который находится [в северной стороне от](relation) [срубленного дерева](object), располагающееся [позади](relation) [мужчины](object)
-    - анализируй [ограждение](object), что располагается [на юге от](relation) [останца](object), который располагается [южнее](relation) [пьяного человека](object)
-    - обследуй [свалившегося человека](object), что находится [неподалеку от](relation) [лампы](object), которая находится [правее](relation) [валуна](object)
-    - исследуй [пьяного человека](object), что [спереди от](relation) [дуба](object), который располагается [в западной стороне от](relation) [дамы](object)
-    - попробуй обследовать [останец](object) [севернее](relation) 
-    - попробуй анализировать [сваленное дерево](object) [правее](relation) тебя
-    - начни исследовать [пригорок](object) [на востоке](relation) тебя
-    - обследуй [холм](object) [сзади](relation) 
-    - анализируй [холм](object) [впереди](relation) тебя
-    - анализируй [свет](object) [справа](relation) 
-    - пытайся обследовать [упавшее дерево](object) [спереди](relation) тебя
-    - попробуй анализировать [постройку](object) [в северной стороне](relation) тебя
-    - исследуй [чащу](object) [перед](relation) собой
-    - подвергни анализу [растение](object) [перед](relation) тобой
-    - начни обследовать [автомобиль](object) [южнее](relation) тебя
-    - подвергни анализу [фонарь](object) [в южной стороне](relation) 
-    - анализируй [расщелину](object) [южнее](relation) тебя
-    - попробуй обследовать [упавшего человека](object) [на юге](relation) 
-    - пытайся анализировать [данное](gaze) [дерево](object)
-    - исследуй [ту](gaze) [яму](object)
-    - подвергни анализу [этого](gaze) [лежащего человека](object)
-    - пытайся анализировать [данный](gaze) [валун](object)
-    - пытайся исследовать [этот](gaze) [барьер](object)
-    - подвергни анализу [этот](gaze) [коттедж](object)
-    - анализируй [данную](gaze) [возвышенность](object)
-    - начни анализировать [эту](gaze) [лампу](object)
-    - подвергни анализу [этого](gaze) [мужчину](object)
-    - начинай обследовать [сюда](gaze), к [ограждению](object)
-    - исследуй [в том направлении](gaze), к [упавшему человеку](object)
-    - анализируй [куда смотрю](gaze), к [сваленному дереву](object)
-    - подвергни анализу [в том направлении](gaze), к [упавшему дереву](object)
-    - начни обследовать [в это место](gaze), до [лампы](object)
-    - исследуй [в этом направлении](gaze), к [камушку](object)
-    - исследуй [сюда](gaze), к [останцу](object)
-    - начинай исследовать [сюда](gaze), до [лесополосы](object)
-    - начни анализировать [сюда](gaze), к [камушку](object)
+    - анализируй
+    - обследуй
+    - исследуй
+    - подвергни анализу
+    - начни анализировать ближнюю [чащу](object)
+    - подвергни анализу ближнюю [даму](object)
+    - исследуй ближайший [разлом](object)
+    - обследуй близлежащий [валун](object)
+    - пытайся исследовать близкий [домик](object)
+    - попробуй исследовать ближнюю [канаву](object)
+    - анализируй ближнюю [расщелину](object)
+    - начинай обследовать близкую [булыгу](object)
+    - попробуй исследовать ближайшую [тачку](object)
+    - подвергни анализу близлежащее [растение](object)
+    - обследуй недалёкую [кучу](object)
+    - исследуй близкий [барьер](object)
+    - подвергни анализу ближайшую [постройку](object)
+    - исследуй недалёкую [рытвину](object)
+    - обследуй недалекий [фонарь](object)
+    - исследуй ближайшего [товарища](object)
+    - исследуй [упавшее дерево](object)
+    - исследуй [горку](object)
+    - начинай анализировать [дуб](object)
+    - анализируй [упавшее дерево](object)
+    - попробуй обследовать [лесополосу](object)
+    - исследуй [дерево](object)
+    - начинай анализировать [дерево](object)
+    - подвергни анализу [булыгу](object)
+    - начни обследовать [ольху](object)
+    - обследуй [лежащего человека](object)
+    - пытайся обследовать [женщину](object)
+    - исследуй [лесополосу](object)
+    - начни анализировать [овраг](object)
+    - начинай анализировать [овраг](object)
+    - обследуй [ребёнка](object)
+    - обследуй [кучу](object)
+    - исследуй [столб](object), который [перед](relation) [деревом](object)
+    - подвергни анализу [преграду](object), что [спереди от](relation) [авто](object)
+    - обследуй [поваленное дерево](object), находящееся [южнее](relation) [дерева](object)
+    - начинай исследовать [особняк](object), что [южнее](relation) [горы](object)
+    - подвергни анализу [свет](object), который [на юге относительно](relation) [пригорка](object)
+    - попробуй анализировать [расщелину](object), что располагается [на севере относительно](relation) [камушка](object)
+    - исследуй [авто](object), что находится [западнее](relation) [избы](object)
+    - начни анализировать [гору](object), находящуюся [на севере от](relation) [спиленного дерева](object)
+    - подвергни анализу [провал](object), который находится [в южной стороне от](relation) [растения](object)
+    - исследуй [лежащего человека](object), который располагается [сзади от](relation) [дубравы](object)
+    - пытайся исследовать [трещину](object), находящуюся [справа от](relation) [возвышенности](object)
+    - попробуй обследовать [валун](object), что располагается [на севере относительно](relation) [свалившегося человека](object)
+    - подвергни анализу [загородку](object), которая находится [рядом с](relation) [домиком](object)
+    - обследуй [возвышенность](object) [около](relation) [лежащего человека](object)
+    - исследуй [домик](object), который находится [в южной стороне от](relation) [рощи](object)
+    - исследуй [авто](object), которое находится [неподалеку от](relation) [светильника](object)
+    - начинай исследовать [лампу](object), которая располагается [справа от](relation) [валуна](object), располагающийся [левее](relation) [лесополосы](object)
+    - исследуй [кучу](object), что находится [восточнее](relation) [валуна](object), что находится [в северной стороне от](relation) [трещины](object)
+    - анализируй [барьер](object), что находится [за](relation) [валуном](object), располагающийся [восточнее](relation) [провала](object)
+    - пытайся исследовать [домик](object), что [правее](relation) [ограждения](object), находящееся [слева от](relation) [железного коня](object)
+    - исследуй [фонарь](object) [позади](relation) [лежащего человека](object), который находится [справа от](relation) [валуна](object)
+    - обследуй [железного коня](object), располагающегося [сзади от](relation) [свалившегося человека](object), что [в южной стороне от](relation) [булыжника](object)
+    - анализируй [дерево](object), находящееся [на севере от](relation) [фонаря](object), который находится [западнее](relation) [дубравы](object)
+    - начинай обследовать [сломанное дерево](object), которое [около](relation) [леса](object) [в северной стороне от](relation) [канавы](object)
+    - исследуй [останец](object), располагающийся [на востоке относительно](relation) [булыги](object), которая располагается [на юге от](relation) [машины](object)
+    - начинай обследовать [человека](object), что располагается [севернее](relation) [загородки](object), которая [на западе от](relation) [упавшего дерева](object)
+    - исследуй [срубленное дерево](object), что находится [перед](relation) [рытвиной](object) [в восточной стороне от](relation) [горки](object)
+    - анализируй [тачку](object), что располагается [севернее](relation) [рощи](object), располагающуюся [на севере от](relation) [загородки](object)
+    - исследуй [дуб](object), который располагается [на севере от](relation) [сломанного дерева](object), что располагается [на юге от](relation) [человека](object)
+    - обследуй [свет](object), располагающийся [спереди от](relation) [валуна](object), располагающийся [правее](relation) [машины](object)
+    - исследуй [здание](object), что располагается [правее](relation) [лежащего человека](object), находящегося [западнее](relation) [пригорка](object)
+    - анализируй [коттедж](object), располагающийся [слева от](relation) [пропасти](object), которая [слева от](relation) [поваленного дерева](object)
+    - обследуй [лампу](object) [на севере](relation) тебя
+    - подвергни анализу [загородку](object) [за](relation) собой
+    - анализируй [лампу](object) [сзади](relation) 
+    - обследуй [тачку](object) [за](relation) тобой
+    - попробуй анализировать [бугор](object) [южнее](relation) тебя
+    - анализируй [булыгу](object) [в северной стороне](relation) себя
+    - подвергни анализу [гору](object) [восточнее](relation) себя
+    - обследуй [берёзу](object) [в северной стороне](relation) 
+    - начинай анализировать [пьяного человека](object) [слева от](relation) себя
+    - пытайся исследовать [расщелину](object) [правее](relation) 
+    - анализируй [лес](object) [левее](relation) себя
+    - попробуй исследовать [даму](object) [в западной стороне](relation) тебя
+    - анализируй [препятствие](object) [на западе](relation) 
+    - попробуй исследовать [кучу](object) [в западной стороне](relation) себя
+    - исследуй [разлом](object) [правее](relation) 
+    - пытайся исследовать [эту](gaze) [берёзу](object)
+    - подвергни анализу [того](gaze) [пьяного человека](object)
+    - подвергни анализу [ту](gaze) [канаву](object)
+    - начни исследовать [тот](gaze) [провал](object)
+    - обследуй [того](gaze) [товарища](object)
+    - исследуй [тот](gaze) [автомобиль](object)
+    - начинай исследовать [того](gaze) [товарища](object)
+    - подвергни анализу [данный](gaze) [барьер](object)
+    - подвергни анализу [то](gaze) [упавшее дерево](object)
+    - подвергни анализу [в том направлении](gaze), до [впадины](object)
+    - анализируй [куда смотрю](gaze), до [возвышенности](object)
+    - исследуй [в это место](gaze), до [валуна](object)
+    - подвергни анализу [в этом направлении](gaze), до [света](object)
+    - подвергни анализу [в это место](gaze), до [горки](object)
+    - пытайся исследовать [туда](gaze), до [разлома](object)
+    - подвергни анализу [в ту сторону](gaze), к [загородке](object)
+    - попробуй анализировать [в ту сторону](gaze), к [спиленному дереву](object)
+    - исследуй [в это место](gaze), к [дому](object)
