--- a/src/data/find.yml
+++ b/src/data/find.yml
@@ -3,102 +3,106 @@ version: "3.1"
 nlu:
 - intent: find
   examples: |
-    - найди ближний [булыжник](object)
-    - обнаружь недалекий [пригорок](object)
-    - обнаружь недалёкую [сосну](object)
-    - найди ближайшее [ограждение](object)
-    - найди ближнюю [чащу](object)
-    - обнаружь недалекий [дом](object)
+    - найди
+    - отыщи
+    - обнаружь
+    - разыщи
+    - разыщи близлежащую [впадину](object)
+    - найди недалёкую [машину](object)
+    - отыщи ближайший [валун](object)
+    - отыщи близлежащую [горку](object)
+    - найди близкий [свет](object)
+    - разыщи ближний [автомобиль](object)
+    - найди ближний [столб](object)
+    - разыщи близкий [останец](object)
+    - разыщи близлежащую [возвышенность](object)
+    - разыщи ближайшую [канаву](object)
+    - отыщи недалёкую [возвышенность](object)
+    - найди близлежащую [пропасть](object)
+    - разыщи близлежащий [останец](object)
+    - разыщи недалёкую [чащу](object)
+    - разыщи ближайший [разрыв](object)
+    - отыщи близкое [препятствие](object)
     - найди ближнюю [лампу](object)
-    - найди недалёкого [лежащего человека](object)
-    - разыщи близлежащее [спиленное дерево](object)
-    - отыщи недалекий [дуб](object)
-    - обнаружь близкую [берёзу](object)
-    - разыщи ближнюю [булыгу](object)
-    - обнаружь недалёкое [срубленное дерево](object)
-    - отыщи ближайшего [пьяного человека](object)
-    - найди близлежащее [дерево](object)
-    - обнаружь недалёкого [свалившегося человека](object)
-    - разыщи ближайший [булыжник](object)
-    - обнаружь недалёкую [берёзу](object)
-    - найди ближний [светильник](object)
-    - обнаружь близлежащий [овраг](object)
-    - разыщи [берёзу](object)
-    - обнаружь [кучу](object)
-    - разыщи [разрыв](object)
-    - разыщи [машину](object)
-    - обнаружь [женщину](object)
-    - обнаружь [трещину](object)
-    - найди [холмик](object)
-    - найди [поваленное дерево](object)
-    - отыщи [человека](object)
-    - обнаружь [особняк](object)
-    - разыщи [даму](object)
-    - найди [строение](object)
-    - разыщи [булыгу](object)
-    - отыщи [расщелину](object)
-    - найди [чащу](object)
-    - отыщи [холм](object)
-    - отыщи [упавшего человека](object)
+    - отыщи ближайшее [ограждение](object)
+    - разыщи близлежащую [загородку](object)
+    - найди близкую [загородку](object)
+    - отыщи [автомобиль](object)
+    - обнаружь [останец](object)
+    - разыщи [автомобиль](object)
+    - отыщи [останец](object)
+    - обнаружь [срубленное дерево](object)
+    - обнаружь [барьер](object)
+    - обнаружь [ребёнка](object)
+    - разыщи [холмик](object)
+    - обнаружь [рощу](object)
+    - обнаружь [строение](object)
+    - обнаружь [упавшего человека](object)
     - найди [камушек](object)
-    - разыщи [булыжник](object)
-    - отыщи [ребёнка](object), что находится [в восточной стороне от](relation) [ограждения](object)
-    - разыщи [ребёнка](object), что находится [правее](relation) [камня](object)
-    - найди [булыжник](object), что [спереди от](relation) [машины](object)
-    - найди [бугор](object), который находится [спереди от](relation) [рытвины](object)
-    - отыщи [тачку](object), располагающуюся [перед](relation) [расщелиной](object)
-    - найди [трещину](object), находящуюся [в северной стороне от](relation) [горы](object)
-    - обнаружь [трещину](object), которая [справа от](relation) [человека](object)
-    - разыщи [разрыв](object), что находится [в северной стороне от](relation) [сваленного дерева](object)
-    - отыщи [пригорок](object), который [в северной стороне от](relation) [валуна](object)
-    - обнаружь [ольху](object), находящуюся [на востоке относительно](relation) [холмика](object)
-    - обнаружь [останец](object), который [справа от](relation) [машины](object)
-    - найди [сосну](object), находящуюся [на западе от](relation) [камушка](object)
-    - отыщи [разрыв](object), который [около](relation) [упавшего человека](object)
-    - обнаружь [преграду](object), что находится [спереди от](relation) [возвышенности](object)
-    - отыщи [машину](object), что располагается [левее](relation) [ольхи](object)
-    - найди [растение](object), что [слева от](relation) [булыжника](object)
-    - разыщи [здание](object), что [на севере от](relation) [срубленного дерева](object)
-    - разыщи [дубраву](object), располагающуюся [перед](relation) [товарищем](object)
-    - разыщи [загородку](object), располагающуюся [слева от](relation) [разрыва](object)
-    - найди [тачку](object), что [спереди от](relation) [человека](object)
-    - отыщи [светильник](object), что находится [западнее](relation) [рытвины](object), что располагается [на западе от](relation) [горки](object)
-    - обнаружь [чащу](object), что располагается [справа от](relation) [возвышенности](object), которая располагается [слева от](relation) [пьяного человека](object)
-    - найди [пьяного человека](object), что находится [слева от](relation) [рощи](object) [правее](relation) [препятствия](object)
-    - найди [спиленное дерево](object), которое [спереди от](relation) [человека](object), который находится [справа от](relation) [валуна](object)
-    - разыщи [авто](object), что располагается [перед](relation) [поваленным деревом](object), которое [на востоке от](relation) [сосны](object)
-    - найди [преграду](object), что располагается [в западной стороне от](relation) [горы](object), которая располагается [левее](relation) [провала](object)
-    - отыщи [барьер](object), располагающийся [слева от](relation) [упавшего человека](object) [спереди от](relation) [автомобиля](object)
-    - найди [останец](object), находящийся [позади](relation) [дубравы](object), которая [на севере относительно](relation) [спиленного дерева](object)
-    - обнаружь [провал](object), который располагается [левее](relation) [валуна](object) [в южной стороне от](relation) [лесополосы](object)
-    - найди [тачку](object) [левее](relation) [трещины](object), находящуюся [около](relation) [канавы](object)
-    - разыщи [разлом](object), что находится [на западе относительно](relation) [камушка](object), который [на юге относительно](relation) [барьера](object)
-    - найди [свалившегося человека](object), находящегося [слева от](relation) [фонаря](object), который располагается [сзади от](relation) [здания](object)
-    - отыщи [сломанное дерево](object), что располагается [в восточной стороне от](relation) [здания](object), располагающееся [восточнее](relation) [камня](object)
-    - найди [женщину](object), что располагается [за](relation) [валуном](object), что располагается [левее](relation) [рощи](object)
-    - обнаружь [растение](object), которое находится [справа от](relation) [постройки](object), которая находится [рядом с](relation) [лесополосой](object)
-    - найди [поваленное дерево](object), которое располагается [за](relation) [женщиной](object), находящуюся [справа от](relation) [ограждения](object)
-    - обнаружь [лес](object), который располагается [справа от](relation) [преграды](object), что находится [спереди от](relation) [сосны](object)
-    - отыщи [спиленное дерево](object), которое находится [справа от](relation) [лампы](object), что находится [на западе от](relation) [особняка](object)
-    - найди [дуб](object), который [левее](relation) [женщины](object), которая находится [на севере от](relation) [разлома](object)
-    - обнаружь [холмик](object), располагающийся [восточнее](relation) [фонаря](object), который располагается [неподалеку от](relation) [валуна](object)
-    - отыщи [автомобиль](object) [впереди](relation) 
-    - разыщи [камень](object) [справа](relation) 
-    - обнаружь [пропасть](object) [в северной стороне](relation) тебя
-    - обнаружь [лежащего человека](object) [слева от](relation) себя
-    - разыщи [рытвину](object) [правее](relation) тебя
-    - обнаружь [упавшего человека](object) [в восточной стороне](relation) тебя
-    - найди [железного коня](object) [перед](relation) собой
-    - отыщи [разлом](object) [в восточной стороне](relation) 
-    - обнаружь [разлом](object) [севернее](relation) себя
-    - разыщи [машину](object) [правее](relation) себя
-    - отыщи [провал](object) [за](relation) собой
-    - обнаружь [человека](object) [на западе](relation) себя
-    - разыщи [растение](object) [на западе](relation) 
-    - найди [валун](object) [справа от](relation) тебя
-    - найди [препятствие](object) [слева от](relation) себя
-    - отыщи [пропасть](object) [на севере](relation) 
-    - разыщи [возвышенность](object) [спереди](relation) себя
-    - обнаружь [булыгу](object) [сзади](relation) тебя
-    - обнаружь [столб](object) [южнее](relation) тебя
-    - найди [упавшего человека](object) [в западной стороне](relation) себя
+    - найди [сосну](object)
+    - найди [фонарь](object)
+    - разыщи [горку](object)
+    - обнаружь [растение](object)
+    - разыщи [пригорок](object)
+    - отыщи [камень](object)
+    - отыщи [камушек](object)
+    - разыщи [мужчину](object), располагающегося [в восточной стороне от](relation) [авто](object)
+    - отыщи [растение](object) [севернее](relation) [машины](object)
+    - найди [избу](object), что располагается [севернее](relation) [упавшего человека](object)
+    - обнаружь [лес](object), который находится [восточнее](relation) [фонаря](object)
+    - найди [пьяного человека](object), который находится [левее](relation) [преграды](object)
+    - найди [рытвину](object), которая находится [на западе от](relation) [железного коня](object)
+    - отыщи [коттедж](object), находящийся [спереди от](relation) [канавы](object)
+    - разыщи [упавшее дерево](object), что находится [левее](relation) [булыги](object)
+    - отыщи [железного коня](object), что [на севере относительно](relation) [препятствия](object)
+    - отыщи [дубраву](object), что [позади](relation) [останца](object)
+    - найди [сломанное дерево](object), которое находится [слева от](relation) [возвышенности](object)
+    - найди [товарища](object), располагающегося [за](relation) [спиленным деревом](object)
+    - отыщи [свет](object), находящийся [западнее](relation) [препятствия](object)
+    - найди [дерево](object), что [спереди от](relation) [пропасти](object)
+    - обнаружь [загородку](object), что располагается [левее](relation) [возвышенности](object)
+    - обнаружь [гору](object), что [западнее](relation) [столба](object)
+    - разыщи [камень](object), находящийся [левее](relation) [разрыва](object)
+    - найди [пригорок](object), находящийся [на западе от](relation) [машины](object)
+    - найди [тачку](object), что располагается [за](relation) [ямой](object)
+    - найди [разрыв](object), располагающийся [за](relation) [упавшим человеком](object)
+    - отыщи [постройку](object), что находится [в восточной стороне от](relation) [железного коня](object), располагающегося [на западе относительно](relation) [пьяного человека](object)
+    - найди [останец](object), который располагается [в восточной стороне от](relation) [берёзы](object), что [за](relation) [упавшим человеком](object)
+    - обнаружь [валун](object), располагающийся [правее](relation) [свалившегося человека](object), располагающегося [рядом с](relation) [женщиной](object)
+    - найди [поваленное дерево](object), которое располагается [левее](relation) [валуна](object), находящийся [спереди от](relation) [пьяного человека](object)
+    - отыщи [столб](object), что [рядом с](relation) [растением](object), которое располагается [западнее](relation) [загородки](object)
+    - обнаружь [берёзу](object), что находится [на востоке от](relation) [леса](object), который располагается [восточнее](relation) [преграды](object)
+    - обнаружь [барьер](object) [на западе относительно](relation) [мужчины](object), который [перед](relation) [авто](object)
+    - разыщи [спиленное дерево](object), которое [западнее](relation) [горки](object) [слева от](relation) [рытвины](object)
+    - отыщи [чащу](object), которая располагается [спереди от](relation) [пригорка](object), который располагается [в западной стороне от](relation) [свалившегося человека](object)
+    - отыщи [машину](object), что [на востоке относительно](relation) [останца](object), что [севернее](relation) [холмика](object)
+    - отыщи [столб](object), который располагается [перед](relation) [останцем](object), располагающийся [спереди от](relation) [камня](object)
+    - разыщи [дерево](object), располагающееся [западнее](relation) [валуна](object), что располагается [на севере относительно](relation) [дамы](object)
+    - обнаружь [холм](object), что располагается [в западной стороне от](relation) [сломанного дерева](object), которое [справа от](relation) [строения](object)
+    - отыщи [лампу](object), которая находится [слева от](relation) [барьера](object), что находится [за](relation) [пригорком](object)
+    - найди [мужчину](object), что находится [левее](relation) [постройки](object), которая находится [перед](relation) [валуном](object)
+    - отыщи [лесополосу](object), которая находится [на юге относительно](relation) [разрыва](object), располагающийся [в южной стороне от](relation) [сломанного дерева](object)
+    - найди [трещину](object), что находится [рядом с](relation) [мужчиной](object), который [в восточной стороне от](relation) [дома](object)
+    - отыщи [упавшего человека](object), находящегося [справа от](relation) [булыги](object), что находится [на юге относительно](relation) [столба](object)
+    - отыщи [тачку](object), что располагается [на юге относительно](relation) [рытвины](object), что располагается [на западе от](relation) [дома](object)
+    - отыщи [здание](object) [в западной стороне от](relation) [дуба](object), который [восточнее](relation) [разлома](object)
+    - найди [светильник](object) [на западе](relation) 
+    - обнаружь [разлом](object) [перед](relation) тобой
+    - найди [трещину](object) [в западной стороне](relation) тебя
+    - найди [гору](object) [впереди](relation) тебя
+    - отыщи [камень](object) [правее](relation) тебя
+    - найди [булыжник](object) [справа](relation) 
+    - обнаружь [холмик](object) [левее](relation) себя
+    - отыщи [растение](object) [спереди](relation) 
+    - разыщи [яму](object) [слева от](relation) тебя
+    - обнаружь [поваленное дерево](object) [на западе](relation) себя
+    - разыщи [трещину](object) [справа от](relation) себя
+    - отыщи [лесополосу](object) [спереди](relation) себя
+    - отыщи [останец](object) [в северной стороне](relation) тебя
+    - отыщи [поваленное дерево](object) [позади](relation) 
+    - обнаружь [столб](object) [за](relation) тобой
+    - отыщи [срубленное дерево](object) [позади](relation) себя
+    - найди [камень](object) [на юге](relation) себя
+    - отыщи [срубленное дерево](object) [на востоке](relation) тебя
+    - разыщи [яму](object) [в южной стороне](relation) 
+    - обнаружь [товарища](object) [западнее](relation) себя
