--- a/src/data/follow.yml
+++ b/src/data/follow.yml
@@ -3,100 +3,102 @@ version: "3.1"
 nlu:
 - intent: follow
   examples: |
-    - прорывайся за [железным конём](object)
-    - попробуй вышагивать за [тачкой](object)
-    - пошел за [машиной](object)
-    - уезжай за [авто](object)
-    - начинай прохаживать за [железным конём](object)
-    - начни проходить за [машиной](object)
-    - попробуй шлёпать за [автомобилем](object)
-    - прохаживай за [тачкой](object)
-    - съезди за [автомобилем](object)
-    - пытайся тащиться за [тачкой](object)
-    - командируйся за [железным конём](object)
-    - начни шмыгать за [тачкой](object)
-    - двигай за [автомобилем](object)
-    - пытайся течь за [тачкой](object)
-    - начинай брести за [авто](object)
-    - выходи за [машиной](object)
-    - пытайся тащиться за [авто](object)
-    - попробуй торопиться за [тачкой](object)
-    - броссься за [машиной](object)
-    - прохаживай за [железным конём](object)
-    - прилети за [тачкой](object)
-    - выйди за [автомобилем](object)
-    - пошел за [авто](object)
-    - начни гнать за [автомобилем](object)
-    - начни мчаться за [авто](object)
-    - попробуй пролетать за [авто](object)
-    - стремись за [автомобилем](object)
-    - пытайся прорываться за [машиной](object)
-    - проезжай за [автомобилем](object)
-    - начни дефилировать за [тачкой](object)
-    - лети за [авто](object)
-    - начни поторапливаться за [авто](object)
-    - устремись за [автомобилем](object)
-    - попробуй гнать за [авто](object)
-    - шлепай за [автомобилем](object)
-    - пробирайся за [автомобилем](object)
-    - наступай за [тачкой](object)
-    - канай за [автомобилем](object)
-    - загребай за [машиной](object)
-    - попробуй мчать за [машиной](object)
-    - поезжай за [машиной](object)
-    - трюшчи за [автомобилем](object)
-    - трюшчи за [авто](object)
-    - выходи за [автомобилем](object)
-    - топай за [машиной](object)
-    - начни стягиваться за [тачкой](object)
-    - попробуй валить за [машиной](object)
-    - попробуй шарить за [автомобилем](object)
-    - начинай маршировать за [тачкой](object)
-    - волочись за [автомобилем](object)
-    - несись за [автомобилем](object)
-    - начинай наступать за [железным конём](object)
-    - пытайся передвигаться за [машиной](object)
-    - мчи за [автомобилем](object)
-    - поторопись за [авто](object)
-    - хромай за [тачкой](object)
-    - попробуй газовать за [машиной](object)
-    - дуй за [машиной](object)
-    - пытайся топать за [железным конём](object)
-    - сдвинься за [тачкой](object)
-    - катись за [машиной](object)
-    - переступай за [авто](object)
-    - приходи за [тачкой](object)
-    - маршируй за [авто](object)
-    - попробуй отправляться за [железным конём](object)
-    - командируйся за [автомобилем](object)
-    - начинай уноситься за [железным конём](object)
-    - начни торопиться за [авто](object)
-    - плыви за [тачкой](object)
-    - пытайся ползти за [тачкой](object)
-    - лети за [железным конём](object)
+    - направляйся за [машиной](object)
+    - начинай чалить за [авто](object)
+    - плыви за [авто](object)
+    - выбредай за [железным конём](object)
+    - скачи за [тачкой](object)
+    - поддай за [автомобилем](object)
+    - выдвигайся за [автомобилем](object)
+    - кинься за [авто](object)
+    - пытайся перебрасываться за [автомобилем](object)
+    - торопись за [железным конём](object)
     - проходи за [тачкой](object)
-    - ступай за [авто](object)
-    - попробуй езжать за [железным конём](object)
-    - начни газовать за [машиной](object)
-    - выбрасывайся за [автомобилем](object)
-    - прилети за [автомобилем](object)
-    - ступай за [машиной](object)
-    - наступай за [авто](object)
-    - вылети за [тачкой](object)
-    - пытайся командироваться за [машиной](object)
-    - попробуй мчать за [автомобилем](object)
-    - начинай проходить за [железным конём](object)
-    - пытайся командироваться за [автомобилем](object)
-    - начинай выбредать за [машиной](object)
-    - прилети за [железным конём](object)
+    - пытайся идти за [железным конём](object)
+    - отправляйся за [машиной](object)
+    - начни лететь за [автомобилем](object)
+    - пытайся сдвигаться за [железным конём](object)
+    - попробуй проходить за [тачкой](object)
+    - плыви за [железным конём](object)
+    - гуляй за [тачкой](object)
     - собирайся за [авто](object)
-    - дерзай за [железным конём](object)
-    - пытайся маршировать за [машиной](object)
-    - шкандыбарь за [автомобилем](object)
-    - начни проезжать за [автомобилем](object)
-    - сходи за [железным конём](object)
-    - скачи за [автомобилем](object)
-    - двигай за [машиной](object)
-    - дефилируй за [тачкой](object)
-    - попробуй пролетать за [машиной](object)
-    - ползи за [тачкой](object)
+    - шлепай за [машиной](object)
+    - уносись за [автомобилем](object)
+    - пытайся мчаться за [железным конём](object)
+    - попробуй стягиваться за [автомобилем](object)
+    - следуй за [железным конём](object)
+    - маршируй за [машиной](object)
+    - начни скакать за [автомобилем](object)
+    - начни шаркать за [тачкой](object)
+    - выбредай за [авто](object)
+    - поддай за [железным конём](object)
+    - ступай за [автомобилем](object)
+    - шмыгай за [железным конём](object)
+    - начни прорываться за [тачкой](object)
+    - тянись за [авто](object)
+    - начинай чалить за [машиной](object)
+    - выходи за [тачкой](object)
+    - начинай плыть за [машиной](object)
+    - двигайся за [автомобилем](object)
+    - начни трогать за [автомобилем](object)
+    - переступай за [машиной](object)
+    - канай за [автомобилем](object)
+    - начни спускаться за [машиной](object)
+    - броссься за [машиной](object)
+    - приспевай за [железным конём](object)
+    - начни семенить за [железным конём](object)
+    - начинай дефилировать за [авто](object)
+    - начни сходить за [тачкой](object)
+    - попробуй течь за [авто](object)
+    - перемещайся за [авто](object)
+    - прилети за [железным конём](object)
+    - теки за [железным конём](object)
+    - выйди за [автомобилем](object)
+    - выбредай за [машиной](object)
+    - поторопись за [железным конём](object)
+    - начни семенить за [автомобилем](object)
+    - езжай за [авто](object)
+    - начни выметаться за [тачкой](object)
+    - канай за [железным конём](object)
+    - прилети за [авто](object)
+    - трусь за [машиной](object)
+    - устремись за [тачкой](object)
+    - гони за [машиной](object)
+    - подвигайся за [машиной](object)
+    - начинай вышагивать за [железным конём](object)
+    - поторопись за [тачкой](object)
+    - влачись за [машиной](object)
+    - начни идти за [железным конём](object)
+    - ползи за [машиной](object)
+    - шагай за [машиной](object)
+    - прогуляйся за [автомобилем](object)
+    - поторапливайся за [железным конём](object)
+    - поддай за [авто](object)
+    - пытайся шкандыбарить за [автомобилем](object)
+    - попробуй сходить за [машиной](object)
+    - преследуй за [автомобилем](object)
+    - продвигайся за [автомобилем](object)
+    - начинай стремиться за [железным конём](object)
+    - попробуй шарить за [автомобилем](object)
+    - приедь за [машиной](object)
+    - начинай шествовать за [железным конём](object)
+    - маршируй за [тачкой](object)
+    - начни хлюпать за [автомобилем](object)
+    - начинай тянуть за [авто](object)
+    - попробуй мчаться за [железным конём](object)
+    - начни дефилировать за [авто](object)
+    - выходи за [машиной](object)
+    - сдвинься за [железным конём](object)
+    - начинай скакать за [авто](object)
+    - шкандыбарь за [машиной](object)
+    - начинай стремиться за [автомобилем](object)
+    - начни спешить за [машиной](object)
+    - пытайся хлюпать за [авто](object)
+    - пытайся перемещаться за [авто](object)
+    - устремись за [авто](object)
+    - переступай за [автомобилем](object)
+    - тяни за [автомобилем](object)
+    - плетись за [автомобилем](object)
+    - попробуй прорываться за [железным конём](object)
+    - начинай езжать за [тачкой](object)
+    - вылети за [авто](object)
