--- a/src/data/monitor.yml
+++ b/src/data/monitor.yml
@@ -3,101 +3,107 @@ version: "3.1"
 nlu:
 - intent: monitor
   examples: |
-    - осматривай ближнюю [лесополосу](object)
-    - рассмотри ближнюю [лампу](object)
-    - рассматривай близлежащую [ольху](object)
-    - рассмотри ближнюю [горку](object)
-    - попробуй обозревать ближний [фонарь](object)
-    - обозревай ближайшую [булыгу](object)
-    - рассматривай недалёкое [упавшее дерево](object)
-    - пытайся обозревать ближнюю [дубраву](object)
-    - рассматривай близлежащий [булыжник](object)
-    - рассматривай близлежащий [столб](object)
-    - рассмотри недалёкого [мужчину](object)
-    - начинай осматривать недалёкое [строение](object)
-    - рассмотри близкую [пропасть](object)
-    - начни рассматривать близлежащую [горку](object)
-    - рассмотри ближайший [останец](object)
-    - рассмотри ближайшее [авто](object)
-    - обозревай [останец](object)
-    - разглядывай [спиленное дерево](object)
-    - осматривай [барьер](object)
-    - пытайся рассматривать [останец](object)
-    - осмотри [фонарь](object)
-    - рассмотри [человека](object)
-    - осмотри [тачку](object)
-    - осматривай [разрыв](object)
-    - пытайся разглядывать [поваленное дерево](object)
-    - обозревай [преграду](object)
-    - начни рассматривать [булыжник](object)
-    - осмотри [лес](object)
-    - осмотри [расщелину](object)
-    - рассмотри [овраг](object)
-    - начни рассматривать [сосну](object)
-    - рассмотри [рытвину](object)
-    - начни обозревать [валун](object), что располагается [перед](relation) [холмиком](object)
-    - начни осматривать [расщелину](object), которая [в южной стороне от](relation) [пригорка](object)
-    - осмотри [разрыв](object), который [на востоке от](relation) [товарища](object)
-    - осмотри [загородку](object), которая располагается [на юге от](relation) [канавы](object)
-    - разглядывай [разлом](object), который располагается [около](relation) [упавшего дерева](object)
-    - рассмотри [даму](object), что располагается [сзади от](relation) [камня](object)
-    - обозревай [лежащего человека](object), находящегося [на востоке относительно](relation) [лесополосы](object)
-    - обозревай [загородку](object), что [сзади от](relation) [машины](object)
-    - рассмотри [свет](object), что располагается [спереди от](relation) [препятствия](object)
-    - начни обозревать [человека](object), что [в восточной стороне от](relation) [препятствия](object)
-    - рассматривай [ольху](object) [слева от](relation) [булыги](object)
-    - обозревай [булыжник](object), что находится [около](relation) [препятствия](object)
-    - разглядывай [останец](object), который располагается [рядом с](relation) [препятствием](object)
-    - рассмотри [растение](object), что [около](relation) [разрыва](object)
-    - осмотри [барьер](object), находящийся [слева от](relation) [дуба](object)
-    - начинай разглядывать [поваленное дерево](object), которое располагается [слева от](relation) [товарища](object)
-    - разглядывай [провал](object) [в восточной стороне от](relation) [лежащего человека](object), находящегося [слева от](relation) [рощи](object)
-    - рассмотри [столб](object), что располагается [западнее](relation) [горки](object), которая [позади](relation) [дамы](object)
-    - пытайся разглядывать [упавшее дерево](object), которое располагается [сзади от](relation) [фонаря](object), который располагается [на востоке от](relation) [валуна](object)
-    - разглядывай [барьер](object), что находится [западнее](relation) [сосны](object), что находится [в западной стороне от](relation) [свалившегося человека](object)
-    - осмотри [даму](object), располагающуюся [в северной стороне от](relation) [лежащего человека](object), что располагается [слева от](relation) [трещины](object)
-    - рассмотри [дом](object) [на севере относительно](relation) [камня](object), что располагается [слева от](relation) [ограждения](object)
-    - осмотри [упавшее дерево](object), располагающееся [на западе относительно](relation) [булыжника](object), что находится [левее](relation) [столба](object)
-    - осмотри [ограждение](object), которое находится [в северной стороне от](relation) [железного коня](object), что располагается [спереди от](relation) [пропасти](object)
-    - начинай разглядывать [камушек](object), располагающийся [перед](relation) [препятствием](object), которое располагается [на севере от](relation) [железного коня](object)
-    - осмотри [лес](object), что располагается [восточнее](relation) [валуна](object), который находится [правее](relation) [трещины](object)
-    - начни разглядывать [расщелину](object), располагающуюся [спереди от](relation) [камушка](object), располагающийся [на западе относительно](relation) [останца](object)
-    - начни обозревать [горку](object), что [за](relation) [растением](object), что располагается [перед](relation) [особняком](object)
-    - осмотри [сваленное дерево](object), что [справа от](relation) [лежащего человека](object), который находится [на севере относительно](relation) [лампы](object)
-    - начинай обозревать [ребёнка](object), который [рядом с](relation) [светильником](object), что находится [на юге от](relation) [машины](object)
-    - осматривай [сосну](object), которая находится [сзади от](relation) [булыги](object), располагающуюся [на востоке относительно](relation) [расщелины](object)
-    - попробуй разглядывать [валун](object), находящийся [южнее](relation) [ольхи](object), находящуюся [перед](relation) [булыжником](object)
-    - рассмотри [пропасть](object) [на западе](relation) себя
-    - осмотри [упавшего человека](object) [слева](relation) 
-    - разглядывай [преграду](object) [на севере](relation) тебя
-    - рассмотри [автомобиль](object) [в северной стороне](relation) 
-    - рассмотри [свет](object) [в восточной стороне](relation) себя
-    - начни рассматривать [яму](object) [в северной стороне](relation) тебя
-    - попробуй обозревать [лампу](object) [слева от](relation) себя
-    - осматривай [светильник](object) [перед](relation) тобой
-    - попробуй разглядывать [строение](object) [перед](relation) тобой
-    - пытайся рассматривать [преграду](object) [слева](relation) 
-    - рассмотри [лесополосу](object) [правее](relation) 
-    - пытайся разглядывать [особняк](object) [в южной стороне](relation) 
-    - начинай обозревать [валун](object) [справа от](relation) тебя
-    - осматривай [человека](object) [левее](relation) тебя
-    - рассмотри [лежащего человека](object) [на юге](relation) себя
-    - осматривай [лес](object) [на востоке](relation) тебя
-    - рассматривай [этот](gaze) [провал](object)
-    - осмотри [данный](gaze) [разлом](object)
-    - пытайся осматривать [тот](gaze) [фонарь](object)
-    - обозревай [этого](gaze) [свалившегося человека](object)
-    - обозревай [этого](gaze) [ребёнка](object)
-    - начни разглядывать [наблюдаемого](gaze) [пьяного человека](object)
-    - рассмотри [ту](gaze) [канаву](object)
-    - начни осматривать [данный](gaze) [столб](object)
-    - попробуй обозревать [то](gaze) [строение](object)
-    - осмотри [в ту сторону](gaze), к [лежащему человеку](object)
-    - рассматривай [куда смотрю](gaze), к [растению](object)
-    - рассмотри [в эту сторону](gaze), до [мужчины](object)
-    - рассмотри [в этом направлении](gaze), до [горы](object)
-    - попробуй разглядывать [в этом направлении](gaze), к [берёзе](object)
-    - начни осматривать [в ту сторону](gaze), к [горе](object)
-    - попробуй обозревать [в это место](gaze), до [железного коня](object)
-    - начни разглядывать [в это место](gaze), к [лесу](object)
-    - пытайся осматривать [сюда](gaze), к [дому](object)
+    - осматривай
+    - осмотри
+    - обозревай
+    - рассматривай
+    - рассмотри
+    - разглядывай
+    - разглядывай близлежащую [рощу](object)
+    - разглядывай недалёкое [спиленное дерево](object)
+    - осмотри недалёкое [спиленное дерево](object)
+    - рассматривай близкий [автомобиль](object)
+    - попробуй рассматривать недалёкую [загородку](object)
+    - осматривай ближнего [свалившегося человека](object)
+    - начни разглядывать ближайшее [сломанное дерево](object)
+    - разглядывай близкое [строение](object)
+    - осмотри близкий [разрыв](object)
+    - разглядывай ближайшего [мужчину](object)
+    - разглядывай ближнюю [трещину](object)
+    - рассмотри недалекий [фонарь](object)
+    - рассматривай недалекий [дуб](object)
+    - рассмотри недалекий [холм](object)
+    - разглядывай недалекий [холм](object)
+    - рассматривай ближнего [упавшего человека](object)
+    - пытайся разглядывать [здание](object)
+    - рассматривай [камень](object)
+    - начни обозревать [рощу](object)
+    - попробуй осматривать [трещину](object)
+    - обозревай [коттедж](object)
+    - осматривай [упавшее дерево](object)
+    - начинай рассматривать [ограждение](object)
+    - рассмотри [лесополосу](object)
+    - обозревай [булыгу](object)
+    - осмотри [впадину](object)
+    - осматривай [овраг](object)
+    - осматривай [холмик](object)
+    - разглядывай [даму](object)
+    - разглядывай [свет](object)
+    - начни рассматривать [мужчину](object)
+    - осматривай [срубленное дерево](object)
+    - рассматривай [преграду](object), что находится [восточнее](relation) [пропасти](object)
+    - попробуй обозревать [мужчину](object), который располагается [неподалеку от](relation) [ямы](object)
+    - осмотри [лесополосу](object), что располагается [в северной стороне от](relation) [камня](object)
+    - попробуй рассматривать [коттедж](object), что располагается [на западе от](relation) [человека](object)
+    - рассмотри [свалившегося человека](object), что [в северной стороне от](relation) [железного коня](object)
+    - осматривай [коттедж](object), что располагается [неподалеку от](relation) [сосны](object)
+    - осмотри [лесополосу](object), что [справа от](relation) [сосны](object)
+    - осмотри [дерево](object), что располагается [за](relation) [рытвиной](object)
+    - пытайся разглядывать [преграду](object), что располагается [сзади от](relation) [останца](object)
+    - начни разглядывать [столб](object), который находится [севернее](relation) [трещины](object)
+    - рассмотри [препятствие](object), которое находится [позади](relation) [останца](object)
+    - обозревай [коттедж](object), который находится [справа от](relation) [канавы](object)
+    - попробуй осматривать [берёзу](object), располагающуюся [справа от](relation) [препятствия](object)
+    - разглядывай [расщелину](object) [справа от](relation) [рытвины](object)
+    - разглядывай [домик](object) [левее](relation) [булыжника](object)
+    - попробуй разглядывать [спиленное дерево](object) [за](relation) [деревом](object)
+    - обозревай [пропасть](object), которая [спереди от](relation) [рощи](object), которая находится [справа от](relation) [дамы](object)
+    - обозревай [лежащего человека](object), располагающегося [на западе от](relation) [мужчины](object) [левее](relation) [рощи](object)
+    - рассматривай [упавшее дерево](object), которое [позади](relation) [мужчины](object), который располагается [справа от](relation) [ямы](object)
+    - разглядывай [лежащего человека](object), что располагается [западнее](relation) [валуна](object) [спереди от](relation) [железного коня](object)
+    - осматривай [валун](object), что находится [восточнее](relation) [оврага](object) [рядом с](relation) [бугром](object)
+    - пытайся рассматривать [разрыв](object), который располагается [слева от](relation) [светильника](object), находящийся [за](relation) [товарищем](object)
+    - осмотри [столб](object), который [слева от](relation) [ямы](object), что находится [справа от](relation) [упавшего человека](object)
+    - осматривай [постройку](object), которая [на севере от](relation) [упавшего дерева](object), которое находится [справа от](relation) [дубравы](object)
+    - рассмотри [столб](object), что находится [на востоке от](relation) [валуна](object), что [на юге от](relation) [лесополосы](object)
+    - осмотри [лес](object), находящийся [южнее](relation) [тачки](object), которая находится [в западной стороне от](relation) [оврага](object)
+    - обозревай [упавшего человека](object), что [спереди от](relation) [автомобиля](object), что располагается [в западной стороне от](relation) [загородки](object)
+    - осматривай [канаву](object), которая находится [правее](relation) [горки](object), которая находится [правее](relation) [чащи](object)
+    - осмотри [срубленное дерево](object), которое находится [сзади от](relation) [кучи](object), которая располагается [правее](relation) [останца](object)
+    - рассмотри [ребёнка](object), который располагается [левее](relation) [сломанного дерева](object), что находится [за](relation) [свалившимся человеком](object)
+    - осмотри [расщелину](object), которая располагается [западнее](relation) [пригорка](object), что располагается [слева от](relation) [камушка](object)
+    - обозревай [барьер](object), что находится [правее](relation) [избы](object), располагающуюся [за](relation) [фонарём](object)
+    - осмотри [свет](object) [слева от](relation) тебя
+    - попробуй осматривать [загородку](object) [на востоке](relation) 
+    - осмотри [дерево](object) [на севере](relation) тебя
+    - рассмотри [разрыв](object) [на юге](relation) 
+    - осмотри [камень](object) [левее](relation) 
+    - осмотри [здание](object) [в западной стороне](relation) тебя
+    - попробуй осматривать [особняк](object) [на западе](relation) 
+    - осмотри [разлом](object) [в южной стороне](relation) себя
+    - начинай обозревать [свет](object) [на севере](relation) 
+    - осматривай [берёзу](object) [севернее](relation) себя
+    - начинай осматривать [свалившегося человека](object) [восточнее](relation) тебя
+    - осматривай [ребёнка](object) [справа от](relation) тебя
+    - рассматривай [столб](object) [позади](relation) себя
+    - начни обозревать [фонарь](object) [слева от](relation) тебя
+    - осмотри [упавшего человека](object) [в восточной стороне](relation) 
+    - разглядывай [сваленное дерево](object) [левее](relation) тебя
+    - разглядывай [наблюдаемую](gaze) [канаву](object)
+    - обозревай [данный](gaze) [фонарь](object)
+    - пытайся разглядывать [ту](gaze) [яму](object)
+    - обозревай [то](gaze) [спиленное дерево](object)
+    - попробуй осматривать [наблюдаемую](gaze) [дубраву](object)
+    - осмотри [этот](gaze) [разрыв](object)
+    - попробуй рассматривать [данное](gaze) [срубленное дерево](object)
+    - начни осматривать [данное](gaze) [ограждение](object)
+    - осмотри [данную](gaze) [лампу](object)
+    - осматривай [в том направлении](gaze), до [свалившегося человека](object)
+    - обозревай [в этом направлении](gaze), до [человека](object)
+    - обозревай [в это место](gaze), до [упавшего дерева](object)
+    - пытайся рассматривать [в этом направлении](gaze), до [ограждения](object)
+    - начни разглядывать [в ту сторону](gaze), к [барьеру](object)
+    - разглядывай [в этом направлении](gaze), к [автомобилю](object)
+    - рассмотри [в это место](gaze), до [постройки](object)
+    - обозревай [сюда](gaze), к [сосне](object)
+    - осматривай [куда смотрю](gaze), до [железного коня](object)
