--- a/src/data/move.yml
+++ b/src/data/move.yml
@@ -3,101 +3,292 @@ version: "3.1"
 nlu:
 - intent: move
   examples: |
-    - хлюпай на 1м
-    - пошел на 2m
-    - начинай проезжать на 27 м [в южную сторону](direction)
-    - осуществи перемещение на 7м
-    - трюшчи на 15м [прямо по курсу](direction)
-    - броссься на 107м [вправо](direction)
-    - следуй 6м
-    - пройди 2m
-    - отгреби [направо](direction) 8m
-    - пытайся двигаться [по правую руку](direction) 20m
-    - начинай брести [в сторону юга](direction) 25m
-    - броссься 1m
-    - начинай толкаться на 75m
-    - исколеси [в сторону запада](direction) на 27м
-    - отбегай до близкой [дамы](object)
-    - передвигайся до близкой [впадины](object)
-    - перекинься до ближней [горки](object)
-    - убегай до ближнего [спиленного дерева](object)
-    - денься до ближайшего [авто](object)
-    - скатывайся до близлежащего [останца](object)
-    - отбеги до ближайшего [останца](object)
-    - уходи до близкой [булыги](object)
-    - кинься до близкой [лесополосы](object)
-    - трюшчи к ближайшему [останцу](object)
-    - начни шлёпать до ближайшего [дуба](object)
-    - убеги до близкой [рытвины](object)
-    - выдвигайся до недалёкого [дуба](object)
-    - отступи к ближайшему [зданию](object)
-    - начни мчать до [пьяного человека](object)
-    - потеряйся до [дуба](object)
-    - зайди до [спиленного дерева](object)
-    - выходи до [товарища](object)
-    - начни продвигаться до [впадины](object)
-    - начни проезжать до [рытвины](object)
-    - загребай к [впадине](object)
-    - попробуй выбрасываться до [останца](object)
-    - попробуй направлять шаги к [холмику](object)
-    - сдвигайся к [растению](object)
-    - попробуй убегать до [ямы](object)
-    - проезжай до [железного коня](object)
-    - шагай к [сваленному дереву](object)
-    - двигай к [свету](object)
-    - пройди до [света](object), который находится [сзади от](relation) [ограждения](object)
-    - иди до [камушка](object), что располагается [на юге от](relation) [разрыва](object)
-    - начни делать маневр до [сваленного дерева](object), что находится [на юге относительно](relation) [булыжника](object)
-    - пробеги к [железному коню](object), располагающемуся [восточнее](relation) [разлома](object)
-    - пытайся продвигаться до [возвышенности](object), которая располагается [справа от](relation) [ограждения](object)
-    - гуляй до [пропасти](object), которая находится [рядом с](relation) [лежащим человеком](object)
-    - соверши телепортацию к [камню](object), который располагается [восточнее](relation) [ограждения](object)
-    - начинай шкандыбать до [рощи](object), что [перед](relation) [растением](object)
-    - ползи до [загородки](object) [в северной стороне от](relation) [рощи](object)
-    - поддай к [бугру](object), располагающемуся [за](relation) [рытвиной](object)
-    - вкатывайся до [булыги](object), находящейся [восточнее](relation) [ограждения](object)
-    - поторопись до [ямы](object), которая располагается [левее](relation) [валуна](object)
-    - начинай гнать к [дереву](object), которое находится [сзади от](relation) [упавшего человека](object)
-    - начинай плыть до [камня](object), располагающегося [в северной стороне от](relation) [холма](object)
-    - передвигайся к [впадине](object), располагающейся [за](relation) [коттеджем](object) [на западе от](relation) [ребёнка](object)
-    - дерзай до [дерева](object), находящегося [на юге относительно](relation) [коттеджа](object) [неподалеку от](relation) [авто](object)
-    - переместись к [товарищу](object), что располагается [спереди от](relation) [камушка](object), располагающемуся [сзади от](relation) [валуна](object)
-    - начинай основываться до [света](object), находящегося [в восточной стороне от](relation) [рощи](object), что [около](relation) [камушка](object)
-    - попробуй подходить до [камушка](object), который располагается [перед](relation) [светом](object), что находится [спереди от](relation) [ольхи](object)
-    - начни ковылять до [растения](object), которое [рядом с](relation) [сваленным деревом](object), которое [около](relation) [останца](object)
-    - попробуй сходить к [пьяному человеку](object) [на западе относительно](relation) [автомобиля](object) [позади](relation) [пропасти](object)
-    - начни наступать к [даме](object), которая находится [перед](relation) [спиленным деревом](object), располагающемуся [сзади от](relation) [горы](object)
-    - попробуй везти к [оврагу](object), что находится [перед](relation) [валуном](object), который располагается [правее](relation) [трещины](object)
-    - сделай бросок к [камушку](object), находящемуся [в южной стороне от](relation) [барьера](object), который [на востоке относительно](relation) [машины](object)
-    - попробуй загребать до [дерева](object), которое находится [в восточной стороне от](relation) [сломанного дерева](object), которое [позади](relation) [преграды](object)
-    - исколеси до [столба](object), располагающегося [спереди от](relation) [машины](object), что располагается [на западе относительно](relation) [камушка](object)
-    - начни танцевать до [трещины](object), располагающейся [на западе от](relation) [впадины](object) [позади](relation) [светильника](object)
-    - подходи к [возвышенности](object), что находится [за](relation) [лампой](object), располагающейся [перед](relation) [лесополосой](object)
-    - углубись к [сосне](object) [за](relation) собой
-    - причаль к [валуну](object) [перед](relation) собой
-    - припусти к [оврагу](object) [правее](relation) 
-    - пустись к [лежащему человеку](object) [справа от](relation) себя
-    - пытайся двигаться до [свалившегося человека](object) [южнее](relation) 
-    - вылети к [впадине](object) [за](relation) тобой
-    - хромай до [препятствия](object) [на западе](relation) тебя
-    - пытайся волочься до [упавшего человека](object) [на юге](relation) 
-    - пытайся двигаться к [машине](object) [на востоке](relation) тебя
-    - начни стягиваться к [столбу](object) [на западе](relation) себя
-    - попробуй везти к [канаве](object) [на севере](relation) 
-    - соверши телепортацию до [камня](object) [севернее](relation) себя
-    - попробуй выступать до [ольхи](object) [перед](relation) тобой
-    - гуляй до [разрыва](object) [в южной стороне](relation) себя
-    - поторопись [куда смотрю](gaze)
-    - поднемись [в эту сторону](gaze)
-    - проходи [в эту сторону](gaze)
-    - катись [в эту сторону](gaze)
-    - исколеси до [данной](gaze) [трещины](object)
-    - подходи к [этой](gaze) [впадине](object)
-    - уносись до [данной](gaze) [возвышенности](object)
-    - начинай высаживаться к [данной](gaze) [куче](object)
-    - вышагивай к [этой](gaze) [сосне](object)
-    - прилети [в это место](gaze), к [тачке](object)
-    - пытайся гулять [в том направлении](gaze), к [останцу](object)
-    - приедь [куда смотрю](gaze), к [избе](object)
-    - уносись [туда](gaze), до [фонаря](object)
-    - броди [в том направлении](gaze), до [загородки](object)
+    - двигайся
+    - иди
+    - езжай
+    - поезжай
+    - направляйся
+    - следуй
+    - беги
+    - топай
+    - отправляйся
+    - сдай
+    - шагай
+    - пойди
+    - лети
+    - дуй
+    - катись
+    - канай
+    - проходи
+    - пробирайся
+    - перемещайся
+    - плыви
+    - скачи
+    - сдвигайся
+    - шлепай
+    - сдвинься
+    - газуй
+    - переместись
+    - сдвинься
+    - шкандыбай
+    - маршируй
+    - подходи
+    - теки
+    - мчись
+    - двигаться
+    - переходи
+    - приходи
+    - уходи
+    - шествуй
+    - несись
+    - сходи
+    - собирайся
+    - дерзай
+    - переступай
+    - гони
+    - шарь
+    - прохаживай
+    - гуляй
+    - прогуляйся
+    - при
+    - выходи
+    - уезжай
+    - выступай
+    - приедь
+    - ступай
+    - захаживай
+    - съезди
+    - вышагивай
+    - пойди
+    - отвали
+    - пошел
+    - продвигайся
+    - бреди
+    - выдвигайся
+    - зайди
+    - пустись
+    - тащись
+    - ковыляй
+    - хромай
+    - шагай
+    - спеши
+    - выйди
+    - спускайся
+    - поднимайся
+    - смойся
+    - сматывайся
+    - греби
+    - отгреби
+    - тронься
+    - катись
+    - откатись
+    - выскочи
+    - вкатывайся
+    - торопись
+    - поторопись
+    - убегай
+    - отбегай
+    - убеги
+    - отбеги
+    - броди
+    - забреди
+    - пройди
+    - поднемись
+    - выбегай
+    - отходи
+    - подвигайся
+    - проезжай
+    - углубись
+    - перебегать
+    - шмыгай
+    - приближайся
+    - стремись
+    - устремись
+    - прогуляйся
+    - отступи
+    - выбирайся
+    - высаживайся
+    - ползи
+    - передвигайся
+    - семени
+    - убирайся
+    - поторапливайся
+    - трусь
+    - трюшчи
+    - плетись
+    - влачись
+    - лети
+    - вылети
+    - прилети
+    - плыви
+    - перемещайся
+    - влачись
+    - вези
+    - маршируй
+    - ступай
+    - беги
+    - выбегай
+    - пробеги
+    - несись
+    - толкайся
+    - поддай
+    - припусти
+    - подымайся
+    - вали
+    - дефилируй
+    - исколеси
+    - торопись
+    - скатывайся
+    - спускайся
+    - пробеги
+    - хромай
+    - шаркай
+    - шкандыбарь
+    - трогай
+    - становись
+    - катись
+    - потеряйся
+    - приходи
+    - доставь себя
+    - прорывайся
+    - уносись
+    - пролетай
+    - прилети
+    - стягивайся
+    - тащись
+    - тянись
+    - волочись
+    - шлёпай
+    - мчи
+    - приспевай
+    - давай
+    - хлюпай
+    - наступай
+    - перебрасывайся
+    - броссься
+    - выбрасывайся
+    - прохаживай
+    - командируйся
+    - чаль
+    - причаль
+    - танцуй
+    - денься
+    - колобродь
+    - двигай
+    - тяни
+    - вали
+    - устройся
+    - загребай
+    - выбредай
+    - выметайся
+    - основывайся
+    - обоснуйся
+    - перекинься
+    - следуй
+    - удались
+    - кинься
+    - делай маневр
+    - осуществи перемещение
+    - сделай бросок
+    - соверши телепортацию
+    - выполни передислокацию
+    - направляй шаги
+    - следуй по пути
+    - попробуй шарить [2m](distance) [на восток](direction)
+    - дерзай [на 2 м](distance)
+    - шлёпай [7 м](distance)
+    - попробуй сходить [58m](distance) [вспять](direction)
+    - пытайся следовать по пути [на 4m](distance)
+    - вкатывайся [102m](distance) [налево](direction)
+    - начинай хлюпать [на 16 м](distance) [напрямик](direction)
+    - попробуй шкандыбать [75m](distance)
+    - обоснуйся [4m](distance)
+    - приедь [на 13m](distance)
+    - несись [напрямик](direction) [26 м](distance)
+    - сдай [на 23 метра](distance) [в правую сторону](direction)
+    - начинай вышагивать [влево](direction) [5m](distance)
+    - пытайся пробираться [65 м](distance) [в сторону севера](direction)
+    - обоснуйся к недалёкому [поваленному дереву](object)
+    - пытайся толкаться до ближнего [пьяного человека](object)
+    - выбредай к близлежащей [чаще](object)
+    - газуй к ближнему [дереву](object)
+    - маршируй к близлежащему [упавшему дереву](object)
+    - начинай собираться к ближайшему [валуну](object)
+    - выбегай к ближнему [бугру](object)
+    - скатывайся до близлежащей [тачки](object)
+    - пытайся уезжать до недалёкого [валуна](object)
+    - пытайся выдвигаться до недалёкого [леса](object)
+    - отгреби до ближней [избы](object)
+    - шагай до близкой [избы](object)
+    - попробуй сходить до близлежащего [камня](object)
+    - выбрасывайся до ближайшего [сломанного дерева](object)
+    - волочись до [разрыва](object)
+    - прогуляйся до [упавшего человека](object)
+    - пытайся тянуть до [фонаря](object)
+    - шлёпай до [домика](object)
+    - поддай к [препятствию](object)
+    - соверши телепортацию до [ограждения](object)
+    - чаль до [валуна](object)
+    - хромай до [валуна](object)
+    - пытайся течь к [железному коню](object)
+    - броди к [провалу](object)
+    - толкайся к [пригорку](object)
+    - выполни передислокацию к [препятствию](object)
+    - ковыляй до [автомобиля](object)
+    - соверши телепортацию к [камушку](object)
+    - пустись до [пьяного человека](object) [рядом с](relation) [тачкой](object)
+    - пытайся основываться к [расщелине](object), которая располагается [на юге от](relation) [булыги](object)
+    - припусти к [человеку](object) [на востоке от](relation) [дубравы](object)
+    - начинай брести до [останца](object), который [правее](relation) [упавшего дерева](object)
+    - колобродь до [коттеджа](object), который располагается [правее](relation) [столба](object)
+    - попробуй шмыгать к [коттеджу](object), который [правее](relation) [горки](object)
+    - отбегай к [останцу](object), что [на севере относительно](relation) [сваленного дерева](object)
+    - дуй до [дуба](object), который [слева от](relation) [сломанного дерева](object)
+    - начни приближаться до [камушка](object), который находится [южнее](relation) [останца](object)
+    - пытайся приходить к [горе](object), которая находится [на востоке относительно](relation) [оврага](object)
+    - пытайся следовать к [булыге](object), что находится [на юге относительно](relation) [рытвины](object)
+    - пойди к [возвышенности](object), располагающейся [рядом с](relation) [барьером](object)
+    - переместись к [сосне](object) [в западной стороне от](relation) [пьяного человека](object)
+    - начни передвигаться к [машине](object), которая располагается [справа от](relation) [дерева](object)
+    - основывайся к [роще](object) [спереди от](relation) [расщелины](object), что [перед](relation) [бугром](object)
+    - тяни к [лесополосе](object), что находится [за](relation) [ограждением](object), что находится [сзади от](relation) [пропасти](object)
+    - хромай до [барьера](object), который находится [в южной стороне от](relation) [упавшего человека](object), располагающегося [справа от](relation) [светильника](object)
+    - пошел к [ольхе](object), которая находится [в западной стороне от](relation) [пьяного человека](object), располагающемуся [неподалеку от](relation) [здания](object)
+    - попробуй идти до [избы](object), что [севернее](relation) [столба](object), находящегося [на западе от](relation) [сломанного дерева](object)
+    - волочись до [столба](object), что [на севере от](relation) [здания](object), которое [за](relation) [растением](object)
+    - попробуй высаживаться до [упавшего человека](object), располагающегося [около](relation) [загородки](object), что располагается [на западе относительно](relation) [рощи](object)
+    - пытайся маршировать до [холма](object), который находится [за](relation) [машиной](object), что располагается [в северной стороне от](relation) [спиленного дерева](object)
+    - прилети к [камню](object), который располагается [на востоке относительно](relation) [впадины](object), что [южнее](relation) [автомобиля](object)
+    - подходи к [человеку](object), который располагается [левее](relation) [избы](object), располагающейся [слева от](relation) [лесополосы](object)
+    - трусь до [берёзы](object), что располагается [слева от](relation) [бугра](object), находящегося [на севере относительно](relation) [загородки](object)
+    - пролетай к [холмику](object), что [справа от](relation) [поваленного дерева](object), что находится [перед](relation) [расщелиной](object)
+    - начни дефилировать к [препятствию](object), находящемуся [справа от](relation) [дома](object), который располагается [за](relation) [человеком](object)
+    - вылети до [расщелины](object), что располагается [сзади от](relation) [растения](object), которое располагается [за](relation) [останцем](object)
+    - смойся к [пропасти](object) [левее](relation) 
+    - начинай скатываться до [срубленного дерева](object) [в западной стороне](relation) тебя
+    - спускайся до [камушка](object) [справа от](relation) тебя
+    - пытайся собираться к [лесополосе](object) [на западе](relation) себя
+    - пытайся хлюпать до [горки](object) [в северной стороне](relation) себя
+    - пытайся собираться к [роще](object) [справа от](relation) тебя
+    - обоснуйся до [светильника](object) [перед](relation) тобой
+    - сдай до [растения](object) [восточнее](relation) 
+    - трюшчи к [преграде](object) [спереди](relation) 
+    - прилети к [светильнику](object) [на юге](relation) себя
+    - попробуй отправляться до [валуна](object) [на севере](relation) 
+    - выдвигайся до [лежащего человека](object) [перед](relation) тобой
+    - устройся к [женщине](object) [южнее](relation) себя
+    - захаживай [в ту сторону](gaze)
+    - броди [куда смотрю](gaze)
+    - попробуй торопиться [в том направлении](gaze)
+    - попробуй перемещаться [сюда](gaze)
+    - пытайся нестись [в это место](gaze)
+    - попробуй дуть до [этой](gaze) [сосны](object)
+    - выходи к [тому](gaze) [свету](object)
+    - теки до [наблюдаемого](gaze) [упавшего человека](object)
+    - пытайся шмыгать к [тому](gaze) [мужчине](object)
+    - мчи к [этому](gaze) [человеку](object)
+    - пытайся тащиться [в это место](gaze), до [пьяного человека](object)
+    - пытайся сдвигаться [в эту сторону](gaze), к [валуну](object)
+    - отступи [куда смотрю](gaze), к [разрыву](object)
+    - попробуй выдвигаться [куда смотрю](gaze), до [булыжника](object)
+    - поддай [сюда](gaze), к [товарищу](object)
