--- a/src/data/route.yml
+++ b/src/data/route.yml
@@ -3,101 +3,103 @@ version: "3.1"
 nlu:
 - intent: route
   examples: |
-    - пытайся идти в дозор по маршруту номер 2
-    - наблюдай за местностью по трассе 1
-    - охраняй по второй трассе
-    - наблюдай за местностью по методу номер 1
-    - пытайся разведуть местность по 2 методу
-    - иди в патруль по маршруту 1
-    - попробуй осуществлять обход местности по трассе 1
-    - разведка по второй линии
-    - начни разведывать по способу 2
-    - наблюдай за местностью по маршруту номер 2
-    - обойди окрестности по второй программе
-    - разведуй местность по пути 1
-    - следи за обстановкой вокруг по второй трассе
-    - разведывай местность по первому способу
-    - обойди окрестности по второму маршруту
-    - начни начинать патрулирование по методу 1
-    - начинай патрулировать по способу 1
-    - начни патрулировать по 2 дороге
-    - патрулируй по программе 1
-    - начни нести дозор по 2 маршруту
-    - попробуй разведывать местность по 1 дороге
-    - неси дозор по второй трассе
-    - разведывай местность по первому маршруту
-    - пытайся осуществлять обход местности по второму способу
-    - иди в патруль по 1 плану
-    - пытайся разведывать местность по 1 способу
-    - попробуй нести дозор по 2 схеме
-    - пытайся идти в дозор по дороге номер 2
-    - разведывай по линии 1
-    - разведуй местность по 1 линии
-    - иди в патруль по 2 трассе
-    - разведывай по первому маршруту
-    - обойди окрестности по пути номер 2
-    - начинай осуществлять обход местности по первой схеме
-    - разведуй местность по линии номер 2
-    - иди в патруль по первому способу
-    - разведка по первой линии
-    - неси дозор по линии номер 1
-    - пытайся наблюдать за местностью по трассе номер 1
-    - начинай нести патрульную службу по первой схеме
-    - начни нести дозор по дороге 1
-    - начинай разведуть местность по пути 2
-    - начинай осуществлять обход местности по пути 1
-    - следи за обстановкой вокруг по трассе 1
-    - попробуй разведуть местность по 1 дороге
-    - начни охранять по первому методу
-    - иди в патруль по способу 1
-    - попробуй разведуть местность по дороге номер 1
-    - разведуй местность по 1 дороге
-    - разведка по 1 способу
-    - попробуй разведуть местность по первой программе
-    - пытайся разведывать по 1 программе
-    - обойди окрестности по 2 дороге
-    - попробуй нести дозор по линии номер 2
-    - следи за обстановкой вокруг по 1 трассе
-    - начинай патрулировать по дороге 1
-    - обойди окрестности по способу 2
-    - разведывай по методу 1
-    - охраняй по второму способу
-    - попробуй идти в дозор по второй программе
-    - разведывай местность по второй линии
-    - начинай наблюдать за местностью по второй трассе
-    - обойди окрестности по 2 схеме
-    - иди в дозор по 2 трассе
-    - начни разведывать по 2 методу
-    - попробуй нести патрульную службу по 2 схеме
-    - иди в патруль по второй линии
-    - обойди окрестности по линии 1
-    - иди в патруль по методу номер 1
-    - разведуй местность по методу 2
-    - начинай следить за обстановкой вокруг по плану номер 2
-    - начни идти в дозор по 2 программе
-    - разведка по второму маршруту
-    - наблюдай за местностью по второй программе
-    - неси дозор по маршруту номер 2
-    - пытайся начинать патрулирование по трассе 2
-    - обойди окрестности по программе 1
-    - пытайся начинать патрулирование по методу номер 2
-    - осуществляй обход местности по маршруту 2
-    - попробуй осуществлять обход местности по пути 1
-    - попробуй разведывать местность по программе номер 1
-    - неси дозор по первому методу
-    - обойди окрестности по методу 2
-    - иди в патруль по 1 дороге
-    - иди в дозор по 2 программе
-    - иди в дозор по первой трассе
-    - начинай следить за обстановкой вокруг по программе 1
-    - начинай нести патрульную службу по 1 маршруту
-    - начни разведуть местность по 1 способу
-    - разведуй местность по схеме номер 2
-    - пытайся наблюдать за местностью по первой трассе
+    - начни патрулировать по пути номер 2
+    - иди в дозор по программе номер 1
+    - обойди окрестности по маршруту номер 1
+    - разведуй местность по способу 2
+    - пытайся идти в патруль по способу 2
     - попробуй следить за обстановкой вокруг по способу номер 2
-    - попробуй идти в патруль по пути номер 2
-    - обойди окрестности по 1 плану
-    - охраняй по дороге номер 1
-    - осуществляй обход местности по плану номер 2
-    - начинай наблюдать за местностью по маршруту номер 2
-    - начни начинать патрулирование по плану номер 1
+    - неси патрульную службу по пути 2
+    - разведывай местность по дороге номер 1
+    - начни нести дозор по дороге 1
+    - начинай следить за обстановкой вокруг по трассе номер 1
+    - попробуй патрулировать по второму способу
+    - неси дозор по методу 2
+    - обойди окрестности по 1 трассе
+    - пытайся патрулировать по плану номер 2
+    - иди в патруль по 1 схеме
+    - неси патрульную службу по методу номер 2
+    - начинай разведывать местность по второму способу
+    - начинай идти в дозор по трассе 2
+    - попробуй разведывать по 1 программе
+    - осуществляй обход местности по плану номер 1
+    - начни разведывать по 2 плану
+    - наблюдай за местностью по плану номер 2
+    - начинай патрулировать по 1 плану
+    - начинай нести дозор по программе номер 2
+    - начинай наблюдать за местностью по 2 маршруту
+    - пытайся наблюдать за местностью по методу 1
+    - разведка по 1 дороге
+    - начни следить за обстановкой вокруг по 1 методу
+    - разведывай местность по схеме 2
+    - иди в дозор по маршруту 1
+    - обойди окрестности по 1 линии
+    - попробуй идти в дозор по первому плану
+    - наблюдай за местностью по линии 2
+    - пытайся разведывать местность по дороге номер 2
+    - попробуй патрулировать по второй трассе
+    - обойди окрестности по методу номер 2
+    - охраняй по трассе номер 1
+    - наблюдай за местностью по первому пути
+    - попробуй наблюдать за местностью по способу 2
+    - начни следить за обстановкой вокруг по первому пути
+    - охраняй по второму плану
+    - иди в дозор по дороге номер 2
+    - начинай идти в дозор по 1 методу
+    - пытайся начинать патрулирование по методу номер 2
+    - пытайся идти в дозор по схеме номер 1
+    - разведывай по второму маршруту
+    - попробуй нести патрульную службу по 2 трассе
+    - разведывай по схеме номер 1
+    - разведуй местность по 1 способу
+    - начинай начинать патрулирование по второй трассе
+    - разведка по пути 1
+    - иди в дозор по способу 1
+    - пытайся нести дозор по 2 трассе
+    - попробуй начинать патрулирование по второму плану
+    - иди в дозор по второй дороге
+    - попробуй разведуть местность по программе 1
+    - разведывай местность по способу номер 1
+    - начинай следить за обстановкой вокруг по методу 1
+    - начинай разведывать местность по плану номер 1
+    - пытайся наблюдать за местностью по второй трассе
+    - наблюдай за местностью по дороге номер 2
+    - попробуй идти в дозор по 2 пути
+    - начни идти в дозор по первому пути
+    - иди в дозор по второй схеме
+    - начинай следить за обстановкой вокруг по линии номер 2
+    - начинай идти в патруль по первой схеме
+    - начинай патрулировать по 1 маршруту
+    - начни разведывать местность по трассе номер 1
+    - начинай нести патрульную службу по маршруту 1
+    - иди в патруль по первой линии
+    - неси дозор по дороге номер 2
+    - начни нести дозор по 1 маршруту
+    - пытайся следить за обстановкой вокруг по методу номер 2
+    - начинай охранять по методу номер 2
+    - начни начинать патрулирование по программе 2
+    - охраняй по второму пути
+    - попробуй нести дозор по способу номер 1
+    - разведуй местность по 2 линии
+    - пытайся разведывать местность по методу номер 1
+    - пытайся разведывать местность по пути номер 2
+    - пытайся охранять по линии 2
+    - попробуй разведывать по маршруту номер 2
+    - начинай разведуть местность по второй схеме
+    - начинай разведуть местность по пути номер 1
+    - неси патрульную службу по методу 1
+    - начни осуществлять обход местности по линии 2
+    - начинай патрулирование по 1 маршруту
+    - начинай следить за обстановкой вокруг по схеме 1
+    - охраняй по схеме 2
+    - иди в патруль по второй трассе
+    - начни следить за обстановкой вокруг по 1 трассе
+    - попробуй разведывать местность по пути 2
+    - иди в дозор по первой трассе
+    - обойди окрестности по 2 дороге
+    - начни разведывать по методу номер 2
+    - разведка по программе номер 1
+    - начинай патрулирование по трассе 1
+    - разведка по маршруту номер 1
+    - осуществляй обход местности по второй линии
+    - пытайся охранять по 2 трассе
