--- a/src/configs/spacy_conf.yml
+++ b/src/configs/spacy_conf.yml
@@ -10,7 +10,7 @@ pipeline:
 # See https://rasa.com/docs/rasa/tuning-your-model for more information.
 
   - name: SpacyNLP
-    model: ru_core_news_sm
+    model: ru_core_news_md
     case_sensitive: False
   - name: SpacyTokenizer
   - name: SpacyFeaturizer
@@ -23,23 +23,23 @@ pipeline:
   - name: DIETClassifier
     random_seed: 1
     constrain_similarities: True
-    epochs: 200
+    epochs: 100
     entity_recognition: True
     use_masked_language_model: False
   - name: ResponseSelector
     random_seed: 1
     epochs: 200
     constrain_similarities: True
-  - name: DucklingEntityExtractor
-    url: "http://localhost:8000"
-    dimensions: ["duration", "distance"]
-    locale: "ru_RU"
   - name: FallbackClassifier
     threshold: 0.999
     ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
-policies:
 
-   - name: RulePolicy
+policies:
+  - name: MemoizationPolicy
+  - name: TEDPolicy
+    max_history: 5
+    epochs: 200
+  - name: RulePolicy
