--- a/src/data/go_around.yml
+++ b/src/data/go_around.yml
@@ -3,101 +3,108 @@ version: "3.1"
 nlu:
 - intent: go_around
   examples: |
-    - опережай ближайшую [загородку](object)
-    - обставь ближайшего [лежащего человека](object)
-    - попробуй опережать близкое [поваленное дерево](object)
-    - обскочи ближайшую [чащу](object)
-    - обскочи недалёкую [трещину](object)
-    - опереди близкую [расщелину](object)
-    - оставь позади недалёкое [сломанное дерево](object)
-    - опережай близлежащий [провал](object)
-    - обставь ближайшее [спиленное дерево](object)
-    - попробуй опережать близлежащего [пьяного человека](object)
-    - начни опережать близкий [камень](object)
-    - опережай недалёкого [мужчину](object)
-    - начинай обскакивать близкое [здание](object)
-    - начинай обскакивать близкую [кучу](object)
-    - обскакивай близкого [товарища](object)
-    - опережай ближнюю [яму](object)
-    - опереди [свалившегося человека](object)
-    - обскакивай [упавшее дерево](object)
-    - пытайся опережать [барьер](object)
-    - оставь позади [упавшего человека](object)
-    - обскочи [разлом](object)
-    - начни опережать [домик](object)
-    - обходи [тачку](object)
-    - объезжай [машину](object)
-    - обскочи [столб](object)
-    - опереди [гору](object)
-    - оставь позади [разлом](object)
-    - оставь позади [светильник](object)
-    - оставь позади [ограждение](object)
-    - обходи [упавшего человека](object)
-    - обскочи [гору](object)
-    - обскакивай [лампу](object)
-    - обскакивай [валун](object), что находится [на севере от](relation) [железного коня](object)
-    - опереди [валун](object), который [левее](relation) [домика](object)
-    - оставь позади [ребёнка](object) [перед](relation) [лесом](object)
-    - попробуй опережать [фонарь](object), что находится [в восточной стороне от](relation) [валуна](object)
-    - обставь [мужчину](object), находящегося [восточнее](relation) [лесополосы](object)
-    - обставь [ольху](object), что [восточнее](relation) [автомобиля](object)
-    - оставь позади [камушек](object) [левее](relation) [поваленного дерева](object)
-    - обставь [овраг](object), который располагается [в западной стороне от](relation) [леса](object)
-    - оставь позади [ограждение](object), которое располагается [восточнее](relation) [пьяного человека](object)
-    - оставь позади [барьер](object), находящийся [неподалеку от](relation) [растения](object)
-    - обставь [останец](object), располагающийся [перед](relation) [горкой](object)
-    - обходи [разлом](object), что располагается [левее](relation) [железного коня](object)
-    - оставь позади [свалившегося человека](object), что располагается [на западе относительно](relation) [трещины](object)
-    - оставь позади [бугор](object), который находится [перед](relation) [лесом](object)
-    - объезжай [сломанное дерево](object), что находится [за](relation) [берёзой](object)
-    - обходи [тачку](object), располагающуюся [на востоке от](relation) [ольхи](object)
-    - обставь [овраг](object), что [на юге от](relation) [лежащего человека](object), располагающегося [рядом с](relation) [булыгой](object)
-    - начни обскакивать [валун](object), который [около](relation) [света](object), что [на севере относительно](relation) [лежащего человека](object)
-    - оставь позади [чащу](object), которая находится [за](relation) [барьером](object), что располагается [правее](relation) [валуна](object)
-    - опереди [рощу](object), что [восточнее](relation) [срубленного дерева](object), находящееся [справа от](relation) [валуна](object)
-    - обходи [лес](object), который располагается [рядом с](relation) [железным конём](object), что располагается [около](relation) [преграды](object)
-    - опереди [автомобиль](object), который [слева от](relation) [чащи](object), что располагается [севернее](relation) [ямы](object)
-    - обходи [растение](object), находящееся [на севере от](relation) [свалившегося человека](object), находящегося [за](relation) [домиком](object)
-    - обставь [автомобиль](object), располагающийся [рядом с](relation) [булыжником](object), располагающийся [на юге относительно](relation) [человека](object)
-    - обставь [домик](object), что располагается [в южной стороне от](relation) [упавшего дерева](object) [в восточной стороне от](relation) [барьера](object)
-    - опереди [барьер](object), находящийся [левее](relation) [ребёнка](object), что [справа от](relation) [здания](object)
-    - попробуй обскакивать [холм](object), что располагается [южнее](relation) [ямы](object), располагающуюся [в западной стороне от](relation) [сосны](object)
-    - обскочи [упавшее дерево](object), которое находится [на западе относительно](relation) [мужчины](object), что располагается [спереди от](relation) [лежащего человека](object)
-    - обскочи [камушек](object), находящийся [в южной стороне от](relation) [машины](object), которая находится [перед](relation) [сосной](object)
-    - обходи [ребёнка](object), располагающегося [восточнее](relation) [светильника](object), находящийся [около](relation) [трещины](object)
-    - пытайся обскакивать [гору](object), которая [правее](relation) [спиленного дерева](object), которое располагается [правее](relation) [человека](object)
-    - пытайся обскакивать [тачку](object), которая [на севере относительно](relation) [кучи](object), которая [на юге относительно](relation) [загородки](object)
-    - обскакивай [избу](object) [за](relation) тобой
-    - обскочи [гору](object) [справа](relation) 
-    - начинай опережать [камень](object) [в северной стороне](relation) 
-    - пытайся объезжать [сосну](object) [на севере](relation) тебя
-    - обходи [трещину](object) [на севере](relation) себя
-    - оставь позади [канаву](object) [в северной стороне](relation) тебя
-    - объезжай [камень](object) [восточнее](relation) 
-    - опереди [лампу](object) [слева от](relation) тебя
-    - начинай опережать [дерево](object) [на западе](relation) 
-    - оставь позади [автомобиль](object) [позади](relation) 
-    - опереди [ограждение](object) [левее](relation) себя
-    - опереди [овраг](object) [за](relation) тобой
-    - обскакивай [упавшего человека](object) [севернее](relation) 
-    - оставь позади [дубраву](object) [на западе](relation) тебя
-    - обскочи [барьер](object) [позади](relation) тебя
-    - обставь [постройку](object) [в северной стороне](relation) 
-    - оставь позади [наблюдаемый](gaze) [разлом](object)
-    - попробуй обскакивать [того](gaze) [свалившегося человека](object)
-    - опереди [наблюдаемый](gaze) [домик](object)
-    - объезжай [данное](gaze) [сломанное дерево](object)
-    - начни опережать [тот](gaze) [свет](object)
-    - обскочи [наблюдаемое](gaze) [авто](object)
-    - обставь [эту](gaze) [лесополосу](object)
-    - объезжай [данный](gaze) [камень](object)
-    - объезжай [эту](gaze) [преграду](object)
-    - опережай [куда смотрю](gaze), до [постройки](object)
-    - опережай [куда смотрю](gaze), до [авто](object)
-    - попробуй объезжать [в это место](gaze), к [упавшему дереву](object)
-    - обходи [в ту сторону](gaze), до [пропасти](object)
-    - обскочи [в этом направлении](gaze), к [лесу](object)
-    - опережай [в это место](gaze), к [возвышенности](object)
-    - обходи [туда](gaze), до [постройки](object)
-    - обходи [в ту сторону](gaze), к [чаще](object)
-    - обставь [куда смотрю](gaze), до [дуба](object)
+    - объезжай
+    - обходи
+    - оставь позади
+    - обставь
+    - опережай
+    - опереди
+    - обскакивай
+    - обскочи
+    - оставь позади близлежащую [женщину](object)
+    - обходи близлежащую [пропасть](object)
+    - обставь близкий [камень](object)
+    - оставь позади близкого [железного коня](object)
+    - обходи недалёкую [дубраву](object)
+    - опереди ближайший [столб](object)
+    - попробуй опережать недалёкую [загородку](object)
+    - обскочи ближнего [упавшего человека](object)
+    - попробуй обскакивать близлежащий [разлом](object)
+    - оставь позади близкую [впадину](object)
+    - опереди ближайший [останец](object)
+    - опереди ближнюю [гору](object)
+    - начни обскакивать близкую [чащу](object)
+    - попробуй объезжать близлежащий [светильник](object)
+    - обскочи ближнего [мужчину](object)
+    - пытайся объезжать близкий [холмик](object)
+    - оставь позади [женщину](object)
+    - начинай обскакивать [свалившегося человека](object)
+    - опережай [дубраву](object)
+    - обходи [свалившегося человека](object)
+    - обходи [сосну](object)
+    - обставь [избу](object)
+    - опереди [упавшего человека](object)
+    - оставь позади [товарища](object)
+    - попробуй объезжать [пригорок](object)
+    - обставь [разрыв](object)
+    - опереди [овраг](object)
+    - объезжай [автомобиль](object)
+    - опережай [овраг](object)
+    - попробуй опережать [спиленное дерево](object)
+    - обскочи [останец](object)
+    - опережай [лесополосу](object)
+    - оставь позади [канаву](object), что располагается [западнее](relation) [горки](object)
+    - обскочи [останец](object), что [на юге относительно](relation) [рощи](object)
+    - объезжай [лампу](object) [неподалеку от](relation) [свалившегося человека](object)
+    - оставь позади [ольху](object), что находится [в северной стороне от](relation) [пьяного человека](object)
+    - объезжай [свалившегося человека](object), что [на востоке от](relation) [особняка](object)
+    - обскочи [домик](object) [перед](relation) [свалившимся человеком](object)
+    - обскакивай [человека](object), находящегося [левее](relation) [бугра](object)
+    - опереди [дубраву](object), находящуюся [на западе относительно](relation) [провала](object)
+    - начни обскакивать [чащу](object) [в северной стороне от](relation) [дамы](object)
+    - обскочи [разлом](object), который располагается [на западе от](relation) [валуна](object)
+    - опереди [сломанное дерево](object) [восточнее](relation) [избы](object)
+    - обскочи [валун](object), находящийся [рядом с](relation) [лесополосой](object)
+    - начни опережать [рощу](object), что [сзади от](relation) [дома](object)
+    - объезжай [сосну](object), что располагается [в северной стороне от](relation) [дамы](object)
+    - обскочи [здание](object), которое [правее](relation) [лесополосы](object)
+    - опереди [женщину](object), которая [перед](relation) [свалившимся человеком](object)
+    - начинай обскакивать [лежащего человека](object), находящегося [слева от](relation) [провала](object), который располагается [на юге от](relation) [света](object)
+    - объезжай [холмик](object), который располагается [в западной стороне от](relation) [булыжника](object) [на востоке от](relation) [леса](object)
+    - обскакивай [спиленное дерево](object), которое располагается [в северной стороне от](relation) [света](object), находящийся [в восточной стороне от](relation) [расщелины](object)
+    - пытайся обскакивать [лежащего человека](object) [западнее](relation) [останца](object), располагающийся [на севере от](relation) [возвышенности](object)
+    - обставь [останец](object), что располагается [на востоке относительно](relation) [горки](object), находящуюся [спереди от](relation) [автомобиля](object)
+    - обставь [фонарь](object), находящийся [правее](relation) [дуба](object), что [на севере относительно](relation) [булыги](object)
+    - обскочи [провал](object), располагающийся [на западе от](relation) [коттеджа](object), который располагается [западнее](relation) [чащи](object)
+    - обходи [пропасть](object), которая находится [правее](relation) [столба](object) [в южной стороне от](relation) [булыги](object)
+    - обскочи [дом](object), находящийся [левее](relation) [канавы](object), которая располагается [в южной стороне от](relation) [горы](object)
+    - объезжай [гору](object) [рядом с](relation) [дубравой](object), которая [восточнее](relation) [авто](object)
+    - начни опережать [валун](object) [левее](relation) [леса](object) [на севере от](relation) [сосны](object)
+    - обходи [холм](object), который находится [слева от](relation) [рытвины](object), располагающуюся [на востоке относительно](relation) [разрыва](object)
+    - обставь [тачку](object), находящуюся [на юге относительно](relation) [ребёнка](object), располагающегося [около](relation) [холмика](object)
+    - обходи [останец](object), что располагается [в южной стороне от](relation) [ребёнка](object), который располагается [справа от](relation) [пьяного человека](object)
+    - обставь [булыгу](object), которая располагается [рядом с](relation) [провалом](object), который находится [на западе относительно](relation) [рощи](object)
+    - оставь позади [спиленное дерево](object), которое [на востоке от](relation) [авто](object) [сзади от](relation) [кучи](object)
+    - обставь [препятствие](object) [севернее](relation) тебя
+    - опереди [сосну](object) [западнее](relation) 
+    - обставь [холмик](object) [в южной стороне](relation) тебя
+    - обставь [упавшее дерево](object) [севернее](relation) 
+    - обставь [камень](object) [на севере](relation) себя
+    - опережай [женщину](object) [правее](relation) 
+    - опереди [расщелину](object) [перед](relation) тобой
+    - обскочи [ограждение](object) [левее](relation) себя
+    - обскакивай [рощу](object) [в восточной стороне](relation) 
+    - обскочи [берёзу](object) [справа от](relation) себя
+    - оставь позади [возвышенность](object) [на западе](relation) 
+    - опереди [расщелину](object) [левее](relation) 
+    - начинай объезжать [булыжник](object) [на юге](relation) 
+    - объезжай [упавшее дерево](object) [в южной стороне](relation) 
+    - обставь [разлом](object) [южнее](relation) тебя
+    - обскочи [наблюдаемую](gaze) [горку](object)
+    - обскакивай [ту](gaze) [лампу](object)
+    - обходи [эту](gaze) [булыгу](object)
+    - обскочи [данный](gaze) [разрыв](object)
+    - обставь [эту](gaze) [машину](object)
+    - оставь позади [этот](gaze) [барьер](object)
+    - обставь [наблюдаемую](gaze) [трещину](object)
+    - оставь позади [эту](gaze) [сосну](object)
+    - опережай [данную](gaze) [машину](object)
+    - обскочи [сюда](gaze), до [машины](object)
+    - объезжай [туда](gaze), до [женщины](object)
+    - обскакивай [сюда](gaze), до [разлома](object)
+    - оставь позади [куда смотрю](gaze), к [лампе](object)
+    - опережай [в ту сторону](gaze), до [спиленного дерева](object)
+    - обходи [сюда](gaze), к [валуну](object)
+    - обходи [в это место](gaze), до [товарища](object)
+    - обходи [в том направлении](gaze), до [сосны](object)
+    - опережай [куда смотрю](gaze), к [столбу](object)
