--- a/src/data/rotate.yml
+++ b/src/data/rotate.yml
@@ -3,100 +3,107 @@ version: "3.1"
 nlu:
 - intent: rotate
   examples: |
-    - пытайся заворчивать 256°
-    - повернись [на восточный край](direction) 60°
-    - сделай поворот 166° [в западную сторону](direction)
-    - пытайся заворчивать 77 ° [по правую руку](direction)
-    - повернись 42° [в сторону запада](direction)
-    - заворчивай [на запад](direction) 196°
-    - поворачивай 324 градуса [в сторону востока](direction)
-    - повернись [на восток](direction) на 15 градусов
-    - сделай поворот 234°
-    - повернись 251 °
-    - соверши поворот [на запад](direction) 285 °
+    - поворачивай
+    - повернись
+    - заворчивай
+    - сделай поворот
+    - соверши поворот
+    - заворчивай [275°](distance)
+    - повернись [в сторону востока](direction) [336°](distance)
+    - повернись [на 30 градусов](distance) [налево](direction)
+    - поворачивай [на 245°](distance)
+    - поворачивай [на север](direction) [на 166 °](distance)
+    - повернись [в сторону юга](direction) [на 360 градусов](distance)
+    - сделай поворот [165 градусов](distance) [в сторону востока](direction)
+    - соверши поворот [на 317 °](distance)
+    - начинай поворачивать [на север](direction) [147 градусов](distance)
+    - поворачивай [в сторону юга](direction) [на 319°](distance)
+    - пытайся поворачивать [в северную сторону](direction) [на 265 градусов](distance)
+    - пытайся разворачиваться обратно
     - разворот вспять
+    - разверни в обратную сторону
     - развернись вспять
-    - разверни назад
+    - развернись назад
     - разворот 
+    - развернись в обратную сторону
+    - начинай разворачиваться в обратную сторону
+    - разворачивайся в обратную сторону
+    - разворот в обратную сторону
     - разверни вспять
-    - разворачивайся 
-    - пытайся разворачиваться в обратную сторону
-    - попробуй разворачиваться назад
-    - развернись обратно
-    - повернись 6,5 часов [направо](direction)
-    - поворачивай на 3 часа 0 минут [на южный край](direction)
-    - повернись [по левую руку](direction) 11 с половиной часов
-    - заворчивай на 6:30 [на юг](direction)
-    - пытайся поворачивать час
-    - повернись на 8:00 [в сторону запада](direction)
-    - сделай поворот [направо](direction) 4,5 часа
-    - повернись на 7:00 [на южный край](direction)
-    - начни поворачивать 5 30 [на восток](direction)
-    - сделай поворот на 9,5 часов
-    - сделай поворот до ближайшей [дубравы](object)
-    - соверши поворот до близлежащей [ольхи](object)
-    - повернись к ближайшей [яме](object)
-    - сделай поворот к недалёкому [упавшему человеку](object)
-    - поворачивай к недалёкому [бугру](object)
-    - поворачивай к ближнему [человеку](object)
-    - поворачивай к недалёкому [разлому](object)
-    - сделай поворот до близкого [разрыва](object)
-    - повернись к ближайшему [сваленному дереву](object)
-    - сделай поворот до близлежащей [чащи](object)
-    - соверши поворот к недалёкому [столбу](object)
-    - заворчивай к [возвышенности](object)
-    - соверши поворот к [столбу](object)
-    - повернись до [камня](object)
-    - заворчивай к [лампе](object)
-    - поворачивай до [преграды](object)
-    - пытайся поворачивать к [пригорку](object)
-    - повернись до [пропасти](object)
-    - соверши поворот к [берёзе](object)
-    - начни поворачивать до [бугра](object)
-    - соверши поворот до [бугра](object)
-    - попробуй заворчивать к [дубу](object)
-    - поворачивай до [особняка](object), который находится [в восточной стороне от](relation) [железного коня](object)
-    - повернись до [преграды](object), которая располагается [севернее](relation) [лежащего человека](object)
-    - повернись до [поваленного дерева](object), которое располагается [неподалеку от](relation) [булыги](object)
-    - заворчивай к [барьеру](object), что располагается [южнее](relation) [трещины](object)
-    - повернись к [валуну](object), находящемуся [левее](relation) [сваленного дерева](object)
-    - повернись к [барьеру](object), который находится [рядом с](relation) [ольхой](object)
-    - начни поворачивать до [дубравы](object), что находится [рядом с](relation) [особняком](object)
-    - повернись до [ребёнка](object), что располагается [позади](relation) [железного коня](object)
-    - начни поворачивать к [валуну](object), что располагается [восточнее](relation) [машины](object)
-    - сделай поворот до [срубленного дерева](object), что находится [западнее](relation) [столба](object)
-    - попробуй заворчивать к [роще](object), которая находится [восточнее](relation) [сваленного дерева](object)
-    - попробуй поворачивать до [чащи](object), которая находится [на севере относительно](relation) [камня](object), что находится [на западе от](relation) [пропасти](object)
-    - повернись к [холму](object), который [на севере от](relation) [сосны](object), которая располагается [рядом с](relation) [разломом](object)
-    - начинай поворачивать до [домика](object), находящегося [рядом с](relation) [расщелиной](object), что [левее](relation) [авто](object)
-    - заворчивай до [чащи](object), которая располагается [на востоке относительно](relation) [срубленного дерева](object), которое находится [на севере от](relation) [ребёнка](object)
-    - повернись к [холмику](object), находящемуся [на севере от](relation) [ямы](object), что [в западной стороне от](relation) [препятствия](object)
-    - заворчивай к [лежащему человеку](object), который находится [на юге от](relation) [коттеджа](object), который располагается [в западной стороне от](relation) [столба](object)
-    - соверши поворот к [останцу](object), который [на севере относительно](relation) [товарища](object) [рядом с](relation) [срубленным деревом](object)
-    - соверши поворот до [светильника](object), находящегося [перед](relation) [упавшим человеком](object), находящегося [на юге относительно](relation) [растения](object)
-    - повернись до [загородки](object) [правее](relation) [авто](object), которое [на востоке от](relation) [ямы](object)
-    - сделай поворот к [железному коню](object), который находится [на востоке от](relation) [домика](object), который [севернее](relation) [поваленного дерева](object)
-    - сделай поворот к [авто](object), которое находится [перед](relation) [постройкой](object), находящейся [около](relation) [преграды](object)
-    - соверши поворот к [дубу](object) [за](relation) тобой
-    - попробуй поворачивать к [женщине](object) [восточнее](relation) себя
-    - соверши поворот до [дубравы](object) [слева](relation) 
-    - соверши поворот к [чаще](object) [на севере](relation) 
-    - соверши поворот до [лампы](object) [левее](relation) тебя
-    - поворачивай до [валуна](object) [на западе](relation) 
-    - поворачивай к [дубу](object) [справа](relation) 
-    - соверши поворот к [барьеру](object) [перед](relation) собой
-    - начинай заворчивать к [барьеру](object) [левее](relation) тебя
-    - начинай заворчивать к [провалу](object) [справа](relation) 
-    - повернись до [сосны](object) [на севере](relation) 
-    - соверши поворот к [этой](gaze) [горке](object)
-    - начинай заворчивать до [наблюдаемого](gaze) [мужчины](object)
-    - поворачивай до [этой](gaze) [расщелины](object)
-    - соверши поворот к [наблюдаемому](gaze) [человеку](object)
-    - повернись к [этому](gaze) [булыжнику](object)
-    - поворачивай к [данному](gaze) [особняку](object)
-    - заворчивай [в этом направлении](gaze), к [товарищу](object)
-    - начни поворачивать [сюда](gaze), до [расщелины](object)
-    - сделай поворот [в этом направлении](gaze), к [ольхе](object)
-    - повернись [сюда](gaze), к [человеку](object)
-    - заворчивай [в эту сторону](gaze), к [лампе](object)
-    - сделай поворот [в том направлении](gaze), к [канаве](object)
+    - соверши поворот [вправо](direction) [на 10 с половиной часов](distance)
+    - заворчивай [на 11:00](distance) [влево](direction)
+    - сделай поворот [11 с половиной часов](distance)
+    - заворчивай [6:00](distance)
+    - повернись [7:00](distance) [на запад](direction)
+    - начни заворчивать [на 12 0 0](distance) [на восток](direction)
+    - соверши поворот [3 30](distance)
+    - попробуй заворчивать [на пол 2](distance) [на юг](direction)
+    - соверши поворот [на пол 7](distance) [в сторону юга](direction)
+    - заворчивай [на 11 30](distance) [на восток](direction)
+    - заворчивай до близкой [тачки](object)
+    - сделай поворот до близкого [товарища](object)
+    - соверши поворот до ближнего [фонаря](object)
+    - поворачивай до недалёкой [загородки](object)
+    - соверши поворот к близлежащему [сваленному дереву](object)
+    - заворчивай к недалёкой [преграде](object)
+    - сделай поворот к недалёкому [барьеру](object)
+    - сделай поворот к ближнему [лежащему человеку](object)
+    - сделай поворот до близлежащего [светильника](object)
+    - начинай поворачивать к ближайшему [разлому](object)
+    - начинай поворачивать до ближнего [камушка](object)
+    - повернись к [валуну](object)
+    - соверши поворот до [трещины](object)
+    - поворачивай до [останца](object)
+    - начни поворачивать до [дома](object)
+    - сделай поворот к [автомобилю](object)
+    - соверши поворот к [лежащему человеку](object)
+    - начинай поворачивать к [валуну](object)
+    - соверши поворот до [света](object)
+    - попробуй поворачивать до [оврага](object)
+    - заворчивай к [свалившемуся человеку](object)
+    - заворчивай до [препятствия](object)
+    - поворачивай до [разрыва](object), находящегося [слева от](relation) [упавшего человека](object)
+    - заворчивай до [строения](object), которое [спереди от](relation) [светильника](object)
+    - попробуй поворачивать до [пьяного человека](object) [справа от](relation) [избы](object)
+    - повернись к [куче](object), что располагается [на севере от](relation) [рощи](object)
+    - сделай поворот до [ограждения](object), что располагается [за](relation) [дубравой](object)
+    - соверши поворот до [чащи](object), что [в южной стороне от](relation) [автомобиля](object)
+    - начинай поворачивать до [булыжника](object), который располагается [на востоке относительно](relation) [срубленного дерева](object)
+    - повернись к [чаще](object), что находится [спереди от](relation) [автомобиля](object)
+    - повернись к [лампе](object), находящейся [на западе от](relation) [ребёнка](object)
+    - сделай поворот к [разлому](object), что располагается [слева от](relation) [камушка](object)
+    - заворчивай до [авто](object), что располагается [на востоке от](relation) [пропасти](object)
+    - поворачивай к [женщине](object), которая находится [позади](relation) [ограждения](object), которое находится [на востоке от](relation) [срубленного дерева](object)
+    - сделай поворот к [горке](object), располагающейся [на севере от](relation) [лесополосы](object), что располагается [севернее](relation) [останца](object)
+    - повернись к [домику](object), который находится [около](relation) [автомобиля](object), находящемуся [на севере относительно](relation) [лампы](object)
+    - заворчивай до [света](object), который располагается [позади](relation) [преграды](object), которая располагается [на востоке от](relation) [берёзы](object)
+    - поворачивай к [машине](object), что располагается [в южной стороне от](relation) [лежащего человека](object), который находится [рядом с](relation) [расщелиной](object)
+    - сделай поворот к [разрыву](object), что [левее](relation) [машины](object), находящейся [слева от](relation) [домика](object)
+    - соверши поворот до [камушка](object), находящегося [слева от](relation) [упавшего человека](object), который [на юге относительно](relation) [валуна](object)
+    - соверши поворот до [валуна](object), который находится [южнее](relation) [холма](object), который [на юге от](relation) [лесополосы](object)
+    - заворчивай до [провала](object), располагающегося [в северной стороне от](relation) [горки](object), что находится [перед](relation) [булыжником](object)
+    - поворачивай до [товарища](object), находящегося [восточнее](relation) [барьера](object), который [на севере от](relation) [ямы](object)
+    - сделай поворот до [лампы](object), которая располагается [в восточной стороне от](relation) [дуба](object) [в южной стороне от](relation) [человека](object)
+    - сделай поворот к [горе](object) [на юге](relation) тебя
+    - поворачивай до [дубравы](object) [в западной стороне](relation) себя
+    - сделай поворот до [столба](object) [в северной стороне](relation) себя
+    - повернись до [дерева](object) [за](relation) собой
+    - соверши поворот к [чаще](object) [в восточной стороне](relation) 
+    - соверши поворот к [тачке](object) [южнее](relation) тебя
+    - заворчивай до [тачки](object) [на востоке](relation) тебя
+    - соверши поворот до [строения](object) [южнее](relation) 
+    - поворачивай к [чаще](object) [восточнее](relation) тебя
+    - заворчивай к [авто](object) [восточнее](relation) себя
+    - пытайся заворчивать к [валуну](object) [слева от](relation) себя
+    - соверши поворот до [наблюдаемого](gaze) [валуна](object)
+    - поворачивай до [наблюдаемого](gaze) [сваленного дерева](object)
+    - соверши поворот до [данного](gaze) [останца](object)
+    - попробуй поворачивать до [этого](gaze) [сломанного дерева](object)
+    - сделай поворот до [данного](gaze) [останца](object)
+    - повернись до [данной](gaze) [женщины](object)
+    - соверши поворот [куда смотрю](gaze), до [товарища](object)
+    - поворачивай [сюда](gaze), к [сломанному дереву](object)
+    - соверши поворот [в том направлении](gaze), до [лампы](object)
+    - заворчивай [в том направлении](gaze), до [светильника](object)
+    - заворчивай [в это место](gaze), к [срубленному дереву](object)
+    - пытайся поворачивать [в это место](gaze), до [упавшего человека](object)
